--- a/机器学习_决策树.md
+++ b/机器学习_决策树.md
@@ -1,11 +1,11 @@
 #机器学习_决策树
 ##介绍
 --------------------------------
-*举个简单的例子，先有个感性的认识：每年校园招聘时，人力部门都会筛选简历：看看学校是不是很好？是硕士/博士？专业是否符合？等等。这个过程实际上就是一个决策树，不断地进行判断，最后得到一个结论：是否进行面试。
-*有兴趣可以先看看关于它的介绍：[决策树学习(wikipedia)](http://zh.wikipedia.org/wiki/%E5%86%B3%E7%AD%96%E6%A0%91%E5%AD%A6%E4%B9%A0)
-*我们使用决策树来处理分类问题，它包含判断模块，终止模块。
-*决策树是根据训练数据来构造的，之后可用于分析数据，或用作预测。
-*_决策树构造的难点在于如何提取出一系列规则用作分类_
-*优点：复杂度不高，便于理解。缺点：可能会产生过度匹配问题。
+举个简单的例子，先有个感性的认识：每年校园招聘时，人力部门都会筛选简历：看看学校是不是很好？是硕士/博士？专业是否符合？等等。这个过程实际上就是一个决策树，不断地进行判断，最后得到一个结论：是否进行面试。
+有兴趣可以先看看关于它的介绍：[决策树学习(wikipedia)](http://zh.wikipedia.org/wiki/%E5%86%B3%E7%AD%96%E6%A0%91%E5%AD%A6%E4%B9%A0)
+我们使用决策树来处理分类问题，它包含判断模块，终止模块。
+决策树是根据训练数据来构造的，之后可用于分析数据，或用作预测。
+_决策树构造的难点在于如何提取出一系列规则用作分类_
+优点：复杂度不高，便于理解。缺点：可能会产生过度匹配问题。
 
 ##
