--- a/机器学习_决策树.md
+++ b/机器学习_决策树.md
@@ -5,14 +5,14 @@
 
 ![决策树举例](/images/jiqixuexi/jueceshu_jueceshu.png)
 
->决策树是根据训练数据来构造的，之后可用于分析数据，或用作预测。
->优点：复杂度不高，便于理解。
->缺点：可能会产生过度匹配问题。
->难点：
->    1 如果有很多特征，选取哪些特征，按照什么顺序才能更好的进行分类？
-    2 递归构造以及结束条件的判断。
-    3 过度匹配问题的处理。
-    4 通过训练集构造决策树，如何将其保存？
+>决策树是根据训练数据来构造的，之后可用于分析数据，或用作预测。<br>
+>优点：复杂度不高，便于理解。<br>
+>缺点：可能会产生过度匹配问题。<br>
+>难点：<br>
+>   1 如果有很多特征，选取哪些特征，按照什么顺序才能更好的进行分类？<br>
+    2 递归构造以及结束条件的判断。<br>
+    3 过度匹配问题的处理。<br>
+    4 通过训练集构造决策树，如何将其保存？<br>
 
 >有兴趣可以先看看关于决策树的介绍：[决策树学习(wikipedia)](http://zh.wikipedia.org/wiki/%E5%86%B3%E7%AD%96%E6%A0%91%E5%AD%A6%E4%B9%A0)
 
