--- a/机器学习_决策树.md
+++ b/机器学习_决策树.md
@@ -18,7 +18,7 @@
 
 ## 划分数据集
 --------------------------------
->在学习如何选取最好的特征来划分数据之前，我们先来学习下熵(entropy)的概念。熵是集合信息的一种度量方式，可以表示划分数据集的前后信息发生的变化。它的公式为：
+>在学习如何选取最好的特征来划分数据之前，我们先来学习下熵(entropy)的概念。熵是集合信息的一种度量方式，可以表示划分数据集的前后信息发生的变化。它的公式为：<br>
 >![熵](/images/jiqixuexi/jueceshu_shang.png)
 
 >假设分类后，有C种结果，每种的概率为p(x)，结果切分的越均匀，entropy的值越大。所以，我们的目标是计算每一种特征的熵，选择最大值的特征，作为当前分类的判断节点。
