--- a/机器学习_决策树.md
+++ b/机器学习_决策树.md
@@ -3,7 +3,7 @@
 --------------------------------
 >举个简单的例子，先有个感性的认识：他人给介绍相亲时，总会问几个简单的问题，然后判断是否有见面的必要。这个过程实际上就是一个决策树。我们使用决策树来处理分类问题，它包含判断模块，终止模块。先看一个简单的决策树表示图：
 
-![决策树举例](/images/jiqixuexi/jueceshu_jueceshu.png)
+<center>![决策树举例](/images/jiqixuexi/jueceshu_jueceshu.png)</center>
 
 >决策树是根据训练数据来构造的，之后可用于分析数据，或用作预测。<br>
 >优点：复杂度不高，便于理解。<br>
