--- a/机器学习_决策树.md
+++ b/机器学习_决策树.md
@@ -38,4 +38,13 @@
 >但是假如数据集已经处理了所有的属性，但是类标签依然不是唯一的。怎么办？我们通常会采用多数表决非方法决定该叶子节点的分类。<br>
 >构造决策树的目的在于后续的使用，若是每次都根据训练集来生成，则会消耗很多时间。因此最好将生成好的决策树进行序列化操作，保存在硬盘上，并在需要的时候读取出来。<br>
 
+## 总结
+--------------------------------
+>假如给定一些包含各种特征的数据，我们应该这样做：
+
+1.假如当前的数据都属于同一类，则结束计算划分，并添加终止模块，其中记录当前的类标识；<br>
+2.若是所有的属性都已消耗完，剩余的数据不属于同一类别，则按照多数表决的方式决定；<br>
+3.遍历每个特征来划分数据（每划分一次，消耗一个特征），对每个结果集求熵，选取最大的作为当前划分特征；（若是熵有相同的情形，任选一个）<br>
+4.否则，按照上述递归构建子树；<br>
+5.序列化保存构建好的决策树，方便后续使用。
 
