--- a/机器学习_决策树.md
+++ b/机器学习_决策树.md
@@ -42,7 +42,7 @@
 --------------------------------
 >假如给定一些包含各种特征的数据，我们应该这样做：
 
-1.假如当前的数据都属于同一类，则结束计算划分，并添加终止模块，其中记录当前的类标识；<br>
+>1.假如当前的数据都属于同一类，则结束计算划分，并添加终止模块，其中记录当前的类标识；<br>
 2.若是所有的属性都已消耗完，剩余的数据不属于同一类别，则按照多数表决的方式决定；<br>
 3.遍历每个特征来划分数据（每划分一次，消耗一个特征），对每个结果集求熵，选取最大的作为当前划分特征；（若是熵有相同的情形，任选一个）<br>
 4.否则，按照上述递归构建子树；<br>
