update jueceshu & add knn

--- a/机器学习_决策树.md
+++ b/机器学习_决策树.md
@@ -48,3 +48,6 @@
 4.否则，按照上述递归构建子树；<br>
 5.序列化保存构建好的决策树，方便后续使用。
 
+--------------------------------
+######（转载本站文章请注明作者和出处 <a href="https://github.com/MangoLiu">MangoLiu</a> ，请勿用于任何商业用途）
+
