--- a/机器学习_数据.md
+++ b/机器学习_数据.md
@@ -20,10 +20,10 @@
 --------------------------------
 >为了让数据更加适合挖掘，需要对数据进行预处理。预处理是一个广泛的领域，下面讨论一下重要的思想和方法：<br>
 
->1. 聚集。将两个或多个对象合并成单个对象。数据规约导致的较小数据集需要较少的内存和处理时间。并且对象或属性群的行为通常比单个对象或属性的行为更加稳定。<br>
+>1. <strong>聚集</strong>。将两个或多个对象合并成单个对象。数据规约导致的较小数据集需要较少的内存和处理时间。并且对象或属性群的行为通常比单个对象或属性的行为更加稳定。<br>
 >2.抽样。有效抽样的主要原理如下：如果样本是有代表性的，则使用样本与使用整个数据集的效果是几乎一样。合适的样本容量可能很难确定，因此有时需要使用自适应或渐进抽样。<br>
->3.维归约。通过创建新的属性，将一些旧属性合并在一起，来降低数据集的维度。或是通过选择旧属性的子集得到新属性。这样可以使模型更加容易理解；数据更容易可视化，并且降低了内存和时间。<br>
->4.特征子集选择。这也是另一种降低维度的方法，仅使用特征的一个子集。而特征的选择是怎样的呢？它可以分成四部分组成：子集评估度量，控制新的特征子集产生的搜索策略，停止搜索判断和验证过程。具体流程图如下：<br>
+>3.<strong>维归约</strong>。通过创建新的属性，将一些旧属性合并在一起，来降低数据集的维度。或是通过选择旧属性的子集得到新属性。这样可以使模型更加容易理解；数据更容易可视化，并且降低了内存和时间。<br>
+>4.<strong>特征子集选择</strong>。这也是另一种降低维度的方法，仅使用特征的一个子集。而特征的选择是怎样的呢？它可以分成四部分组成：子集评估度量，控制新的特征子集产生的搜索策略，停止搜索判断和验证过程。具体流程图如下：<br>
 >![特征子集选择过程流程图](/images/jiqixuexi/shuju_tezheng.PNG)<br>
 >5.特征创建。可以由原始数据创建新的特征；可以将数据映射到新的空间，或是构造特征。<br>
 >6.离散化和二元化。大多数的离散化都是基于熵的。关于熵的知识可以参考[机器学习_决策树](https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0_%E5%86%B3%E7%AD%96%E6%A0%91.md)中的内容。<br>
@@ -31,23 +31,23 @@
 ## 相似性与相异性的度量
 --------------------------------
 >相似度：两个对象相似程度的度量；而相异性就是指相异程度的度量了。<br>
->相似度到[0,1]之间的变换可以使用：s`=(s-s_min)/(s_max-s_min)。而在[0,∞]上取值的相似度映射到[0,1]上，需使用非线性变换，如：d`=d/(d+1)<br>
+>相似度到[0,1]之间的变换可以使用：(s-s_min)/(s_max-s_min)。而在[0,∞]上取值的相似度映射到[0,1]上，需使用非线性变换，如：d/(d+1)<br>
 >一般来说，相似度和相异度之间是可以转换的，任何的单调函数都可以。<br>
->欧几里得距离(计算相异度)：<br>
+><strong>欧几里得距离</strong>(计算相异度)：<br>
 >![欧几里得距离](/images/jiqixuexi/shuju_ouji.PNG)<br>
->欧几里得距离是闵可夫斯基距离的一种情形，闵可夫斯基距离：<br>
+>欧几里得距离是<strong>闵可夫斯基距离</strong>的一种情形，闵可夫斯基距离：<br>
 >![闵可夫斯基距离](/images/jiqixuexi/shuju_minke.PNG)<br>
 <br>
 >下面再介绍一些相似度度量的方法：<br>
->简单匹配系数(SMG)：<br>
+><strong>简单匹配系数</strong>(SMG)：<br>
 >![简单匹配系数](/images/jiqixuexi/shuju_smg.PNG)<br>
->若是涉及到稀疏数据匹配时，大多数都是0-0匹配，这会导致像SMG这样的度量会判定所有的事务都相似，这时，就需要使用Jaccard系数：<br>
+>若是涉及到稀疏数据匹配时，大多数都是0-0匹配，这会导致像SMG这样的度量会判定所有的事务都相似，这时，就需要使用<strong>Jaccard系数</strong>：<br>
 >![Jaccard](/images/jiqixuexi/shuju_j.PNG)<br>
->上面介绍的都是处理二元向量的，那么多元向量呢？我们可以使用余弦相似度来度量，这也是文档相似性最常使用的方法之一：<br>
+>上面介绍的都是处理二元向量的，那么多元向量呢？我们可以使用<strong>余弦相似度</strong>来度量，这也是文档相似性最常使用的方法之一：<br>
 >![cos](/images/jiqixuexi/shuju_cos.PNG)<br>
->相关性：两个具有二元变量或连续变量的数据对象之间的相关性是对象属性之间线性联系的度量。两个数据对象的皮尔森相关定义如下：<br>
+>相关性：两个具有二元变量或连续变量的数据对象之间的相关性是对象属性之间线性联系的度量。两个数据对象的<strong>皮尔森相关</strong>定义如下：<br>
 >![corr](/images/jiqixuexi/shuju_corr.PNG)<br>
->当对象包含不同类型的属性时，如何计算邻近度呢？我们可以分别计算出每个属性之间的相似度。定义一个指示变量（根据约定，为0或者1，表示使用或不使用），再考虑到权值，总相似度定义如下：<br>
+>当对象包含不同类型的属性时，如何计算邻近度呢？我们可以分别计算出每个属性之间的相似度。定义一个指示变量（根据约定，为0或者1，表示使用或不使用），再考虑到权值，<strong>总相似度</strong>定义如下：<br>
 >![sim](/images/jiqixuexi/shuju_sim.PNG)<br>
 
 --------------------------------
