Update and rename 马尔科夫链模型.md to 机器学习_马尔科夫链模型.md

--- a/机器学习_马尔科夫链模型.md
+++ b/机器学习_马尔科夫链模型.md
@@ -7,7 +7,7 @@
 >这样，我们根据上面介绍的，可以得出：![马尔科夫性质](/images/jiqixuexi/markov_xingzhi.PNG)<br>
 > 对于有N个状态的一阶马尔科夫模型，每个状态可以转移到另一个状态（包括自己），则共有N^2次状态转移，可以用状态转移矩阵表示。
 Pij = P(Xn + 1 = i | Xn = j)，表示其中Pij表示系统在时刻t处于状态j，在下一时刻t+l处于状态i的概率。<br>
->>例如：一段文字中名词、动词、形容词出现的情况可以用有3个状态的y一阶马尔科夫模型M表示。状态s1:名词，状态s2:动词，状态s3:形容词。已知状态转移矩阵A，则状态序列O=“名动形名”（假定第一个词为名词）的概率为：
+>例如：一段文字中名词、动词、形容词出现的情况可以用有3个状态的y一阶马尔科夫模型M表示。状态s1:名词，状态s2:动词，状态s3:形容词。已知状态转移矩阵A，则状态序列O=“名动形名”（假定第一个词为名词）的概率为：
 ![马尔科夫例子1](/images/jiqixuexi/markov_example1.PNG)<br>
 >马尔科夫过程定义了以下三个部分：状态，初始向量，状态转移矩阵。<br>
 ##隐形马尔科夫模型
@@ -20,14 +20,11 @@ Pij = P(Xn + 1 = i | Xn = j)，表示其中Pij表示系统在时刻t处于状态
 你知道这个地区的总的天气趋势,并且平时知道某人会做的事情。就是说这个隐马尔可夫模型的参数是已知的.<br>
 'states = Rainy,Sunny
 observations =walk, shop, clean
-
 start_probability =Rainy: 0.6, Sunny: 0.4
-
 transition_probability = {
    Rainy: {Rainy: 0.7, Sunny: 0.3},
    Sunny : {Rainy: 0.4, Sunny: 0.6},
    }
-
 emission_probability = {
    Rainy : {walk: 0.1, shop: 0.4, clean: 0.5},
    Sunny : {walk: 0.6, shop: 0.3, clean: 0.1},
@@ -35,7 +32,6 @@ emission_probability = {
    '<br>
 >可以观察到的状态序列和隐藏的状态序列是概率相关的。隐藏的状态和可观察到的状态之间有一种概率上的关系，也就是说某种隐藏状态 H 被认为是某个可以观察的状态 O1 是有概率的，假设为 P(O1 | H)。如果可以观察的状态有3种，那么很显然 P(O1 | H)+P(O2 | H)+ P(O3 | H) = 1。<br>
 >HMM是语音识别，人体行为识别，文字识别等领域应用非常广泛。<br>
-
 >已知模型参数，计算某一特定输出序列的概率.通常使用forward算法解决.<br>
 >已知模型参数，寻找最可能的能产生某一特定输出序列的隐含状态的序列.通常使用Viterbi算法解决.<br>
 >已知输出序列，寻找最可能的状态转移以及输出概率.通常使用Baum-Welch算法以及Reversed Viterbi算法解决.<br>
