--- a/机器学习_马尔科夫链模型.md
+++ b/机器学习_马尔科夫链模型.md
@@ -18,17 +18,17 @@ Pij = P(Xn + 1 = i | Xn = j)，表示其中Pij表示系统在时刻t处于状态
 >某地只有两种天气：雨天和晴天。某人只做3件事：散步，购物，打扫卫生。
 做什么事，跟天气很有关系。<br>
 你知道这个地区的总的天气趋势,并且平时知道某人会做的事情。就是说这个隐马尔可夫模型的参数是已知的.<br>
-'states = Rainy,Sunny
-observations =walk, shop, clean
-start_probability =Rainy: 0.6, Sunny: 0.4
-transition_probability = {
-   Rainy: {Rainy: 0.7, Sunny: 0.3},
-   Sunny : {Rainy: 0.4, Sunny: 0.6},
-   }
-emission_probability = {
-   Rainy : {walk: 0.1, shop: 0.4, clean: 0.5},
-   Sunny : {walk: 0.6, shop: 0.3, clean: 0.1},
-   }
+'states = Rainy,Sunny<br>
+observations =walk, shop, clean<br>
+start_probability =Rainy: 0.6, Sunny: 0.4<br>
+transition_probability = {<br>
+   Rainy: {Rainy: 0.7, Sunny: 0.3},<br>
+   Sunny : {Rainy: 0.4, Sunny: 0.6},<br>
+   }<br>
+emission_probability = {<br>
+   Rainy : {walk: 0.1, shop: 0.4, clean: 0.5},<br>
+   Sunny : {walk: 0.6, shop: 0.3, clean: 0.1},<br>
+   }<br>
    '<br>
 >可以观察到的状态序列和隐藏的状态序列是概率相关的。隐藏的状态和可观察到的状态之间有一种概率上的关系，也就是说某种隐藏状态 H 被认为是某个可以观察的状态 O1 是有概率的，假设为 P(O1 | H)。如果可以观察的状态有3种，那么很显然 P(O1 | H)+P(O2 | H)+ P(O3 | H) = 1。<br>
 >HMM是语音识别，人体行为识别，文字识别等领域应用非常广泛。<br>
@@ -36,6 +36,6 @@ emission_probability = {
 >已知模型参数，寻找最可能的能产生某一特定输出序列的隐含状态的序列.通常使用Viterbi算法解决.<br>
 >已知输出序列，寻找最可能的状态转移以及输出概率.通常使用Baum-Welch算法以及Reversed Viterbi算法解决.<br>
 >如果您已经看到这，只能说声抱歉，因为我找到了一篇写的非常非常的介绍隐性马尔科夫的文章。自惭形愧了，链接如下：[隐马尔可夫模型（HMM）攻略](http://blog.csdn.net/likelet/article/details/7056068)<br>
---------------------------------
+
 ######（转载本站文章请注明作者和出处 <a href="https://github.com/MangoLiu">MangoLiu</a> ，请勿用于任何商业用途）
 
