--- a/音频广告推送算法---初期需求拉通.md
+++ b/音频广告推送算法---初期需求拉通.md
@@ -1,6 +1,7 @@
 ﻿#音频广告推送算法---初期需求拉通
 ##背景
 --------------------------------
+>目前，组里希望在产品中插入音频广告，这任务落在了我的身上。简单的说，就是根据广告主提出的要求，找到符合的人群推送出去。
 >音频广告不同于传统广告。前者是时间维度上的，后者是空间维度上的。
 >广告主会购买一些关键词，希望针对这些关键词能做到个性智能推荐。这样在用户收听音乐的间隙插入音频广告，已达到盈利的目的。
 
@@ -16,8 +17,8 @@
     8 怎样制定评价标准来衡量这个模型的好坏？<br>
     9 目前是否可以获得小规模的人工设计的的测试用例，以供前期研究开发？<br>
 
->----------#######(以上问题写于2014-09-28，后续再更新)-----------
+######(以上问题写于2014-09-28，后续再更新)-----------
 
 --------------------------------
-######（转载本站文章请注明作者和出处 <a href="https://github.com/MangoLiu">MangoLiu</a> ，请勿用于任何商业用途）
+######（转载本站文章请注明作者和出处 https://github.com/MangoLiu ，请勿用于任何商业用途）
 
