--- a/音频广告推送算法---v1.0流程分析.md
+++ b/音频广告推送算法---v1.0流程分析.md
@@ -13,27 +13,27 @@
 ## 我们需要做的事情：
 --------------------------------
 一、获取所有用户的行为。<br>
->   1 包括baiduidID，userID(针对登陆用户)听歌时间，听歌时长，听歌内容(歌曲、歌手),设备型号，地理区域等。<br>
+>   1 包括baiduID，userID(针对登陆用户)听歌时间，听歌时长，听歌内容(歌曲、歌手),设备型号，地理区域等。<br>
     2 最好有一个独立的ETL来获取这些数据。<br>
     3 Q:这个数据量会非常的大，怎样保存中间结果？<br>
 
 二、提取其中的登陆用户的属性。<br>
 >   1 Q:这个数据量会非常的大，怎样保存中间结果？<br>
 
-三、根据用户的行为和已有的登陆用户的行为，为非登录用户添加属性。<br>
+三、根据用户的行为和已有的登陆用户的属性，为非登录用户添加属性。<br>
 >   1 Q:怎样才算是相似的？<br>
     2 Q:采用K-近邻算法将会极其耗费时间。因为每为一个非登录用户添加属性，都会遍历一遍所有登陆用户的属性。<br>
     3 Q:匹配时的行为维度不会是一样的权值。那么如何确定其权值？<br>
     4 这样的话，在匹配时，最好将用户的一些连续行为做离散化处理。<br>
     5 A:可以不使用KNN，而是设定一个阀值，这样在匹配非登录用户时，找到的第一个高于阀值的登陆用户，我们就认为他们有相同的属性。<br>
     6 Q:像上面所言，如何避免每次都从开头匹配，这样很容易和排在前面的登录用户匹配上的问题？<br>
-      A:可以每次在登陆用户中，随机选择一个开始向下匹配。<br>
+        A:可以每次在登陆用户中，随机选择一个开始向下匹配。<br>
     7 Q:还是数据量大，保存的问题。<br>
 
 四、筛选出符合条件的用户，为其推荐音频广告。<br>
 >   1 根据广告主提出的标签来进行匹配，查找包含该标签的用户。<br>
     2 若是查找到的用户数量大于每次需要推送次数，则需要进行排序。越多标签符合的用户应该越靠前。<br>
-    3 若是查找到的用户数量小于每次需要推送次数时：<br>   
+    3 若是查找到的用户数量小于每次需要推送次数时：
       3.1 小于但是相差不大时：我们可以就推送这些用户，与广告主进行协商或是增加、多推荐的频度。<br>
       3.2 若是明显小于推送次数时：我们应该在登陆用户进行两两相似匹配，若是两个登陆的属性很相似，那么我们取他们属性的并集，将这个并集赋给这两个用户。<strong>(这个工作量会比较大)</strong><br>
     当然，希望推送的次数恰好等于我们筛选出来的用户数量，这样的概率是极小的。<br>
@@ -44,6 +44,9 @@
 >   1 在用户收听的内容上深入做文章。毕竟喜欢同一个歌手的用户，他们的年龄兴趣相似可能性也大。<br>
     2 优化各个行为的权值。<br>
     3 对登陆用户的属性值加以利用。<br>   
+
+
+
 
 ######(以上问题写于2014-10-08，后续再更新)-----------
 
