--- a/音频广告推送算法---v1.0流程分析.md
+++ b/音频广告推送算法---v1.0流程分析.md
@@ -2,7 +2,7 @@
 ## 写在前面
 --------------------------------
 这是对第一个版本v1.0流程的一些个人想法。也包括了一些技术点。<br>
-我认为先开发出一个简单可用的版本并在后后续不断优化，要好于上来就设计一个大而复杂的模型，并且拥有更好的灵活性。<br>
+我认为先开发出一个简单可用的版本并在后续不断优化，要好于上来就设计一个大而复杂的模型，并且拥有更好的灵活性。<br>
 
 ## 输入
 --------------------------------
@@ -27,7 +27,7 @@
     4 这样的话，在匹配时，最好将用户的一些连续行为做离散化处理。<br>
     5 A:可以不使用KNN，而是设定一个阀值，这样在匹配非登录用户时，找到的第一个高于阀值的登陆用户，我们就认为他们有相同的属性。<br>
     6 Q:像上面所言，如何避免每次都从开头匹配，这样很容易和排在前面的登录用户匹配上的问题？<br>
-        A:可以每次在登陆用户中，随机选择一个开始向下匹配。<br>
+         A:可以每次在登陆用户中，随机选择一个开始向下匹配。<br>
     7 Q:还是数据量大，保存的问题。<br>
 
 四、筛选出符合条件的用户，为其推荐音频广告。<br>
@@ -44,8 +44,9 @@
 >   1 在用户收听的内容上深入做文章。毕竟喜欢同一个歌手的用户，他们的年龄兴趣相似可能性也大。<br>
     2 优化各个行为的权值。<br>
     3 对登陆用户的属性值加以利用。<br>   
-
-
+<br>
+<br>
+<br>
 
 
 ######(以上问题写于2014-10-08，后续再更新)-----------
