--- a/音频广告推送算法---v1.0流程分析.md
+++ b/音频广告推送算法---v1.0流程分析.md
@@ -16,6 +16,7 @@
 >   1 包括baiduID，userID(针对登陆用户)听歌时间，听歌时长，听歌内容(歌曲、歌手),设备型号，地理区域等。<br>
     2 最好有一个独立的ETL来获取这些数据。<br>
     3 Q:这个数据量会非常的大，怎样保存中间结果？<br>
+    4 Q:怎样获取用户的行为？不是所有人，每天都使用产品的。若是以他最近一次的行为，那么获取全量用户时存在些麻烦。<br>
 
 二、提取其中的登陆用户的属性。<br>
 >   1 Q:这个数据量会非常的大，怎样保存中间结果？<br>
@@ -38,6 +39,7 @@
       3.2 若是明显小于推送次数时：我们应该在登陆用户进行两两相似匹配，若是两个登陆的属性很相似，那么我们取他们属性的并集，将这个并集赋给这两个用户。<strong>(这个工作量会比较大)</strong><br>
     当然，希望推送的次数恰好等于我们筛选出来的用户数量，这样的概率是极小的。<br>
     4 Q:若A有100个属性，B有20个属性，那么进行标签匹配时，推送给A的概率就明显大于B了。这是不公平的。如何避免这种不公平(毕竟谁都不想被广告骚扰)？<br>
+    5 Q:假定选出了10w待推送广告的用户，但是你不能保证这10w在短期内都会有使用，那么这样的话，就存在有些人的广告不能推送出去。此时该如何处理？<br>
 
 ## 后续可优化点：
 -------------------------------
