--- a/音频广告推送算法---v1.0流程分析.md
+++ b/音频广告推送算法---v1.0流程分析.md
@@ -1,14 +1,14 @@
 #音频广告推送算法---v1.0流程分析
 ## 写在前面
 --------------------------------
-这是对第一个版本v1.0流程的一些个人想法。也包括了一些技术点。<br>
-我认为先开发出一个简单可用的版本并在后续不断优化，要好于上来就设计一个大而复杂的模型，并且拥有更好的灵活性。<br>
+这是对第一个版本v1.0流程的一些个人想法。也包括了一些技术点。
+我认为先开发出一个简单可用的版本并在后续不断优化，要好于上来就设计一个大而复杂的模型，并且拥有更好的灵活性。
 
 ## 输入
 --------------------------------
-输入是由广告主决定的：<br>
->1 音频广告的标签，可能会有多个。<br>
->2 每次推送的次数(我们也可以根据具体的标签给他一个次数的建议。)<br>
+输入是由广告主决定的：  
+    1 音频广告的标签，可能会有多个。
+    2 每次推送的次数(我们也可以根据具体的标签给他一个次数的建议)<br>
 
 ## 我们需要做的事情：
 --------------------------------
@@ -48,12 +48,40 @@
     3 对登陆用户的属性值加以利用。<br>  
     
 <br>
-<br>
-<br>
-
-
 ######(以上问题写于2014-10-08，后续再更新)-----------
+<br>
+## 更新：
+--------------------------------
+1 上面设计的是基于用户上一次的行为设计的流程。但这样做会有一些麻烦：
+>   1.1 新用户首次使用时是不会进行推送的。而新用户的比重很大。<br>
+    1.2 事先选好的用户，不能保证短期内都会推送出去。<br>
+    1.3 存储量非常的大，BaiduID在音乐端多达55亿+。（截止2014-10-08）<br>
+我们要放弃这种策略，采用实时行为触发的模型。
+
+2 目前要设计成实时投放的模型，即用户触发了某种行为就会推送一个广告。<br>
+  但这样做对及时性的要求就有所提高，可以以降低准确性为代价。
+
+3 后期需要根据经验估计广告容量。<br>
+  例如：10w用户使用时，或许会投放15w广告。因为有的人收听时间可能会比较长，可能每听5首歌推荐一个音频。这样的话，这一个用户可能就是投放不只一个广告。
+
+4 非登陆用户去和登陆用户匹配时，各种维度的权值根据不同的维度也应该是不同的。<br>
+  即有可能母婴类的用户对内容维度相似度较大，而体育类的用户在时间上更加的相似。<br>
+  因此，不同的标签要设计不同的权值list。
+
+5 对于登陆用户，我们可以直接通过他的属性来进行推荐。这是最准确而且快捷的，也是我们期待的。<br>
+  而对于非登陆的用户，我们就需要通过他的行为来预测他的属性值。<br>
+  我们对非登陆用户的最终的目标是想找到`他的属性标签`，而不是`跟他最相似的K个登陆用户`。<br>
+  所以，我们绕了一个圈子。<br>
+  我们可以直接通过登陆用户的数据来训练一个模型，这个模型可以根据行为来直接为其预测标签。<br>
+  这样就当模型训练完成后，再来对一个非登陆用户来预测就非常快了。不必再去一一比对登陆用户。
+
+6 所以目前的主要难点和耗时点就是在于：
+>   6.1 登陆用户数据的预处理。（格式，缺省值，连续值离散化等）<br>
+    6.2 针对各个标签的权重计算。（还要考虑后续有新添加标签时的情况）<br>
+    6.3 阈值、广告容量比值等参数值的经验估计。<br>
+    6.4 满足要求用户数量低时的扩张处理。<br>
+
+######(以上问题写于2014-10-09，后续再更新)-----------
 
 --------------------------------
 ######（转载本站文章请注明作者和出处 https://github.com/MangoLiu ，请勿用于任何商业用途）
-
