--- a/杂记---面试别人，我会问些什么？.md
+++ b/杂记---面试别人，我会问些什么？.md
@@ -1,27 +1,27 @@
 ##面试别人，我会看重哪些方面?
 --------------------------------
-1 看积累
+1 <strong>看积累</strong>
 >   1.1 个人代码(github)<br>
     1.2 个人博客<br>
     1.3 个人兴趣(知乎)<br>
 
-2 看学校，看学历
+2 <strong>看学校，看学历<br></strong>
   考虑时间筛选成本，比较简单有效的方式。
 
-3 项目经验
-  最深入的点，最难的点，整体流程架构。
+3 <strong>项目经验<br></strong>
+  最深入的点，最难的点，整体流程架构。<br>
   耗时，但最看人最准。
 
-4 基础知识
-  网络，数据库，软件工程，体统结构等。
+4 <strong>基础知识<br></strong>
+  网络，数据库，软件工程，体统结构等。<br>
   无明显缺陷即可。
 
-5 算法，数学，逻辑思维。
-  看人的思考方式，解决问题的能力。
+5 <strong>算法，数学，逻辑思维</strong><br>
+  看人的思考方式，解决问题的能力。<br>
 
-6 徒手写段代码
-  看思维是否清晰，考虑是否全面，语言是否熟悉。
-  看似无太大益处，然而在实际工作中却是很有用。
+6 <strong>徒手写段代码</strong><br>
+  看思维是否清晰，考虑是否全面，语言是否熟悉。<br>
+  看似无太大益处，然而在实际工作中却是很有用。<br>
 
 --------------------------------
 ######（转载本站文章请注明作者和出处 https://github.com/MangoLiu ，请勿用于任何商业用途）
