--- a/杂记---面试别人，我会问些什么？.md
+++ b/杂记---面试别人，我会问些什么？.md
@@ -1,4 +1,5 @@
 ##面试别人，我会看重哪些方面?
+###六个方面
 --------------------------------
 1 <strong>看积累</strong>
 >   1.1 个人代码(github)<br>
@@ -22,6 +23,15 @@
 6 <strong>徒手写段代码</strong><br>
   看思维是否清晰，考虑是否全面，语言是否熟悉。<br>
   看似无太大益处，然而在实际工作中却是很有用。<br>
+
+
+###举例
+--------------------------------
+1 组合数学中的趣味问题。<br>
+2 在打字和code的过程中，按键最多的字母有哪些？先估计下。若是让你去做，你会怎么样做？<br>
+3 读取一个指定文本，做些简单的事情，在写到指定文本。酌情不断地增加难度和要求。<br>
+4 画一下参与过项目框架图。这样设计有何优劣？<br>
+5 NP问题解思路讨论，包括参数调优。<br>
 
 --------------------------------
 ######（转载本站文章请注明作者和出处 https://github.com/MangoLiu ，请勿用于任何商业用途）
