--- a/音频广告推送模型---日常开发记录1.md
+++ b/音频广告推送模型---日常开发记录1.md
@@ -2,7 +2,7 @@
 --------------------------------
 ## 初步方案确定：
 1 登陆用户的属性标签，以及其各个音乐行为维度,用作训练集。<br>
-2 确定七个维度：时间(event_hour),省份(event_province),城市(event_city),四端(terminal_type),歌曲(song_id),歌手(singer_name),设备(device_model)<br>
+2 确定8个维度：时间(event_hour),省份(event_province),城市(event_city),四端(terminal_type),歌曲(song_id),歌手(singer_name),设备(device_model),专辑(album_id)<br>
 3 这个相当于根据一个用户的多维度，来推测出多属性。(注意不是单一属性)<br>
   我们先从单一属性入手，不断深入。先从“购物”属性入手，因为数量大，变现能力强。<br>
 4 在登陆用户中，需要找到一部分涉及“购物”的人，一部分不涉及的人用作训练集。还要留一部分作为测试集。<br>
