--- a/音频广告推送模型---日常开发记录1.md
+++ b/音频广告推送模型---日常开发记录1.md
@@ -30,6 +30,15 @@
 1 非登录用户的扩张功能。<br>
 2 属性值后面携带的可能性数值没有利用上。
 
+###### (以上写于2014-10-10)
+
+##一些想法
+1 获取数据集时，注意数据偏颇。
+> 获取登陆用户的数据，但移动端的用户登陆比例极低。导致获取的100w数据全都是web端的。
+
+2 从上面可以看出账号系统的重要性。益处实在是多，它可以跨产品集成信息，公司业务越大，带来的优势越明显。
+
+
 
 --------------------------------
 ######（转载本站文章请注明作者和出处 <a href="https://github.com/MangoLiu">MangoLiu</a> ，请勿用于任何商业用途）
