Update and rename 音频广告推送模型---厄里斯魔镜接口(ErisedInterfaces).md to 音频广告推送模型---厄里斯魔镜接口.md

--- a/音频广告推送模型---厄里斯魔镜接口.md
+++ b/音频广告推送模型---厄里斯魔镜接口.md
@@ -1,7 +1,7 @@
-#音频广告推送模型---厄里斯魔镜接口(ErisedInterfaces)
+#大数据部-厄里斯魔镜接口
 ##简介 
-使用工具给定id列表跑出所有的属性特征(线下较大规模调研使用)
-使用场景 线下调研时，给定一些用户id，获取对应的属性。 
+使用工具给定id列表跑出所有的属性特征(线下较大规模调研使用)<br>
+使用场景:线下调研时，给定一些用户id，获取对应的属性。 
 
 ##下载方式
 从产品库下载(`wget -r -nH --preserve-permissions --level=0 --cut-dirs=6 ftp://getprod:getprod@product.scm.baidu.com:/data/prod-64/inf/erised/service/service_1-0-0-1509_PD_BL`)，对应的位置在`output/tools/query_id_client`。
@@ -12,23 +12,26 @@
 query_id kBaiduId < id_file.txt > result.txt
 ```
 <br>
-id文件中存存储格式为：id,id_type: 
+2. id文件中存存储格式为：id,id_type: 
 ```shell
 query_id < id_file.txt > result.txt 
 ```
 <br>
-输出格式： 
+3. 输出格式： 
 一个ID查询结果是1行，格式：
 ```java
-single_line = "id:" + id_value_string + "\t" + "id_type:" + id_type_string + "\t" + str_age + "\t" + str_gender + "\t" + str_app_interest + "\t" + str_general_interest;
+single_line = "id:" + id_value_string + 
+"\t" + "id_type:" + id_type_string + "\t" + str_age + "\t" +
+ str_gender + "\t" + str_app_interest + 
+ "\t" + str_general_interest;
 ```
 
-其中：`javastr_age str_gender  str_app_interest str_general_interest` 格式均为：
+其中：`javastr_age str_gender  str_app_interest str_general_interest` <br>格式均为：
 `str_profile_name + ":" + (plaint_text + "|" + str_weight + " ") * N;`
 
-`str_age str_gender  str_app_interest str_general_interest `这四项某些不存在，则那一项不输出，只输出能查到的属性，如果全都查不到，则只有 id 值和类型被输出.
+`str_age,str_gender,str_app_interest,str_general_interest`这四项某些不存在，则那一项不输出，只输出能查到的属性，如果全都查不到，则只有 id 值和类型被输出.
 
-ID类型字符串：kBaiduId kCuId kIMEI kUserId kUdwid，注意查询和输出时候，对大小写敏感. 
+ID类型字符串：kBaiduId,kCuId,kIMEI,kUserId kUdwid.<br>注意查询和输出时候，对大小写敏感。<br> 
 输出示例： 
 >id:123456789    id_type:kUserId age:18-24|53    gender:男|96    app_interest_normalized:地图导航|31 手机通讯|90 支付|37 词典|1 日语|29 即时通讯|36 音乐|45 社交|66 计算器|46 桌面|45 办公软件|5 豌豆荚|65 通讯录|64 阅读|76 社区|1 浏览器|54 性能优化|2 微博|45 短信|2 记事|1 壁纸|1 数字类游戏|1 Google-Play|4 影音|1 long_term_interest_normalized:旅游|66 汽车|28 阅读|45 汽车/汽车档次/低档汽车（<10w）|63 汽车/汽车档次|57 购物/电商购物/大众点评团|20 房产家居|58 军事|72 影视/电视剧|0 教育培训|63 工作|66 医疗/男科疾病|43 宠物|57 游戏|88 母婴/怀孕期间|65 体育健身|73 游戏/游戏分类|51 游戏/游戏分类/单机游戏|68 音乐|61 游戏/游戏分类/网页游戏|36 游戏/游戏分类/大型网游|36 数码|39 母婴|37 购物/电商购物/京东|32 购物/电商购物|8 生活服务|27 手机|46 购物/母婴类购物倾向|27 购物/母婴类购物倾向/高端母婴购物|33 影视|73 金融财经|37 交通票务|0 购物|82 出国|0 其它|89 创业|15 餐饮|38 医疗|63 
 
