--- a/音频广告推送模型---日常开发记录1.md
+++ b/音频广告推送模型---日常开发记录1.md
@@ -9,7 +9,7 @@
 
 ## 近期计划：
 1 获取几天bhv_play表中的登陆用户的播放数据。注意BDUSS解码。<br>
-2 提取其中的useID，通过大数据部的接口，获得用户侧写的属性。<br>
+2 提取其中的useID，通过大数据部的[厄里斯魔镜接口](https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E9%9F%B3%E9%A2%91%E5%B9%BF%E5%91%8A%E6%8E%A8%E9%80%81%E6%A8%A1%E5%9E%8B---%E5%8E%84%E9%87%8C%E6%96%AF%E9%AD%94%E9%95%9C%E6%8E%A5%E5%8F%A3.md)接口，获得用户侧写的属性。<br>
 3 文本的预处理：离散化、缺省值、归一化等处理，还要处理成libsvm指定格式。
   之后还需要将文本分割成训练集和测试集。训练集中要有正反类别（即包含“购物”属性与否）。<br>
 4 使用[libsvm(baidu百科)](http://baike.baidu.com/view/598089.htm?fr=aladdin)进行训练，学习svm参数调优以及核函数优化。<br>
