--- a/音频广告推送模型---厄里斯魔镜接口.md
+++ b/音频广告推送模型---厄里斯魔镜接口.md
@@ -1,5 +1,7 @@
 #音频广告推送模型-厄里斯魔镜接口
 ##简介 
+[厄里斯魔镜(百度百科)](http://baike.baidu.com/view/119337.htm?fr=aladdin)是出现在《哈利波特与魔法石》中，可以看到人内渴望的魔镜。它本身就是"渴望"英文单词的反写。<br>
+大数据部通利用户近期的检索行为，进行聚类汇总，从而给出用户的侧写。这些侧写属性可以通过其提供的接口来获取到。<br>
 使用工具给定id列表跑出所有的属性特征(线下较大规模调研使用)<br>
 使用场景:线下调研时，给定一些用户id，获取对应的属性。 
 
