哦，船长！我的船长！我添加了设计搞。

--- a/音频广告推送算法---v1.0流程分析.md
+++ b/音频广告推送算法---v1.0流程分析.md
@@ -82,6 +82,14 @@
     6.4 满足要求用户数量低时的扩张处理。<br>
 
 ######(以上问题写于2014-10-09，后续再更新)-----------
+<br>
+和web-rd以及pm沟通后，流程有所更改：<br>
+1 web端给我这边传递id。我们之间有共同的标签库。然后我针对这个id，给出他对每个标签的二分判断。<br>
+2 id包括userid，baiduid，cuid。若是登陆用户，不论是哪个端的都以userid为准。否则，web端看baiduid，移动端看cuid。<br>
+3 确定一级标签库后，返回一个bit串给web端同学。<br>
+初稿如下：<br>
+！[设计初稿](/images/design_ads.png)
+######(以上问题写于2014-10-23，后续再更新)-----------
 
 --------------------------------
 ######（转载本站文章请注明作者和出处 https://github.com/MangoLiu ，请勿用于任何商业用途）
