--- a/音频广告推送算法---v1.0流程分析.md
+++ b/音频广告推送算法---v1.0流程分析.md
@@ -89,7 +89,7 @@
 2 id包括userid，baiduid，cuid。若是登陆用户，不论是哪个端的都以userid为准。否则，web端看baiduid，移动端看cuid。<br>
 3 确定一级标签库后，返回一个bit串给web端同学。<br>
 初稿如下：<br>
-！[设计初稿](/images/design_ads.png)
+![设计初稿](/images/design_ads.png)
 ######(以上问题写于2014-10-23，后续再更新)-----------
 
 --------------------------------
