射雕英雄传。”
华筝说：“你不用这么说，你知道我是永远想嫁给你的。你去找她罢，找十年，找二十年，只要我活着，我总是在这草原上等你。”

--- a/音频广告推送算法---v1.0流程分析.md
+++ b/音频广告推送算法---v1.0流程分析.md
@@ -92,5 +92,57 @@
 ![设计初稿](/images/design_ads.png)
 ######(以上问题写于2014-10-23，后续再更新)-----------
 
+<br>
+## 更新：
+--------------------------------
+在和web-rd和pm的设计串讲会后之后，数据源有重大更改。原计划由web端rd传递过来的信息（地址，歌曲id，手机类型，歌手id等等）；而是直接保留之前的传递id信息，然后以id去推荐组拿到用户的音乐画像，然后用这个音乐画像去做行业兴趣匹配。<br>
+推荐组的音乐画像属性：<br>
+```
+age：新歌、偏新歌、不新不旧歌、偏老歌、老歌 
+area： 日韩、欧美、内地、港台 
+composer： 歌曲的作曲者 
+emotion： 激动、轻松、不满、快乐、平静、伤感、寂寞、压抑、失望、害怕、感动、烦恼 
+gender： 未知性别、男歌手、女歌手、组合歌手 
+hot： 大冷门、冷门、小众、不冷不热、大众、热门、大热门 
+language： 国语、韩语、日语、粤语、英语、其他语言 
+lyricist： 歌曲的作词者 
+rhythm： 快、中、慢、偏慢、偏快 
+scene： 散步、失恋、工作、舒缓、一个人、睡眠、傍晚、运动、聚会、亲热、清晨、阅读、户外、驾驶 
+singer： 歌曲的演唱者ID 
+style：民谣、摇滚、布鲁斯、古典、轻音乐、雷鬼、乡村、乐器、拉丁、世界音乐、R&B、新世纪、金属、实验、流行、电子、说唱
+```
+可以看到其中的composer，lyricist，singer这三个类的枚举数量很大，在判别时没有什么意义。所以采用除这三者之外的其他属性。<br>
+举个用户音乐属性的样例：<br>
+```
+618985650       
+language_国语:0.8900    style_流行:0.8582       rhythm_中:0.3470        area_港台:0.2777        gender_男歌手:0.2460  emotion_伤感:0.1401     gender_女歌手:0.1400    area_内地:0.1080        rhythm_偏快:0.1013      language_粤语:0.0944 emotion_感动:0.0802      hot_大众:0.0799 hot_大冷门:0.0555       rhythm_偏慢:0.0490      hot_小众:0.0418 emotion_轻松:0.0369  age_老歌:0.0345  scene_傍晚:0.0338       scene_聚会:0.0300       emotion_平静:0.0278     scene_户外:0.0275       style_摇滚:0.0269     hot_不冷不热:0.0262     scene_驾驶:0.0256       scene_散步:0.0253       scene_工作:0.0245       scene_一个人:0.0243  scene_清晨:0.0242        style_民谣:0.0241       age_偏老歌:0.0238
+
+```
+通过http接口可以进行请求：<br>
+```
+http://10.26.5.198/getprofile.php?id=00001990eda04ec86ddb0e239491021b8787309a
+```
+请求结果如下：<br>
+```
+{"status":0,"profile":"6_0:1.0000\t11_15:0.7434\t0_0:0.5176\t8_1:0.3550\t4_1:0.3024\t1_2:0.2495\t3_5:0.2369\t0_4:0.1986\t4_2:0.1759\t8_4:0.1643\t5_2:0.1027\t5_4:0.0919\t3_10:0.0834\t5_1:0.0681\t3_1:0.0509\t10_102512:0.0458\t3_6:0.0362\t3_0:0.0356\t10_8396:0.0339\t10_61988:0.0339\t9_6:0.0314\t4_3:0.0293\t9_8:0.0287\t9_13:0.0266\t9_12:0.0262\t0_2:0.0244\t9_10:0.0242\t9_4:0.0239\t5_0:0.0236\t9_1:0.0233"}
+```
+可见结果跟我们上面展示的并不相同。需要有个map进行映射才行。<br>
+```
+age   0  偏新歌 0 新歌  1 老歌  2 偏老歌 3 不新不旧歌  4
+area  1  日韩  0 欧美  1 内地  2 港台  3
+emotion 3   激动  0 轻松  1 不满  2 快乐  3平静 4 伤感  5 寂寞  6 压抑  7 失望  8 害怕  9 感动  10  烦恼  11
+gender  4  未知性别  0 男歌手 1 女歌手 2 组合歌手  3
+hot 5  大众  0 大冷门 1 小众  2 大热门 3不冷不热 4 冷门  5 热门  6
+language 6   国语  0 韩语  1 日语  2 粤语  3 英语  4 其他语言  5
+rhythm  8  快 0 中 1 慢 2 偏快  3偏慢 4
+scene 9   散步  0 失恋  1 工作  2 舒缓  3浪漫 4 聚会  5 睡眠  6 傍晚  7 运动  8 一个人 9 亲热  10  户外  11  阅读  12  清晨  13  驾驶  14
+style 11    民谣  0 摇滚  1 布鲁斯 2 古典  3轻音乐  4 乐器  5 乡村  6 雷鬼  7 拉丁  8 世界音乐  9 R&B 10  爵士  11  新世纪 12  金属  13  实验  14  流行  15  电子  16  说唱  17
+```
+这样我们就通过上面的音乐标签来训练判断非登录用户。<br>
+
+
+
+######(以上问题写于2014-10-30，后续再更新)-----------
+
 --------------------------------
 ######（转载本站文章请注明作者和出处 https://github.com/MangoLiu ，请勿用于任何商业用途）
