--- a/音频广告推送算法---v1.0流程分析.md
+++ b/音频广告推送算法---v1.0流程分析.md
@@ -115,7 +115,14 @@ style：民谣、摇滚、布鲁斯、古典、轻音乐、雷鬼、乡村、乐
 举个用户音乐属性的样例：<br>
 ```
 618985650       
-language_国语:0.8900    style_流行:0.8582       rhythm_中:0.3470        area_港台:0.2777        gender_男歌手:0.2460  emotion_伤感:0.1401     gender_女歌手:0.1400    area_内地:0.1080        rhythm_偏快:0.1013      language_粤语:0.0944 emotion_感动:0.0802      hot_大众:0.0799 hot_大冷门:0.0555       rhythm_偏慢:0.0490      hot_小众:0.0418 emotion_轻松:0.0369  age_老歌:0.0345  scene_傍晚:0.0338       scene_聚会:0.0300       emotion_平静:0.0278     scene_户外:0.0275       style_摇滚:0.0269     hot_不冷不热:0.0262     scene_驾驶:0.0256       scene_散步:0.0253       scene_工作:0.0245       scene_一个人:0.0243  scene_清晨:0.0242        style_民谣:0.0241       age_偏老歌:0.0238
+language_国语:0.8900    style_流行:0.8582    rhythm_中:0.3470   area_港台:0.2777   
+gender_男歌手:0.2460  emotion_伤感:0.1401    gender_女歌手:0.1400   area_内地:0.1080 
+rhythm_偏快:0.1013    language_粤语:0.0944  emotion_感动:0.0802    hot_大众:0.0799 
+hot_大冷门:0.0555     rhythm_偏慢:0.0490    hot_小众:0.0418  emotion_轻松:0.0369  
+age_老歌:0.0345      scene_傍晚:0.0338     scene_聚会:0.0300    emotion_平静:0.0278     
+scene_户外:0.0275    style_摇滚:0.0269   hot_不冷不热:0.0262  scene_驾驶:0.0256       
+scene_散步:0.0253    scene_工作:0.0245    scene_一个人:0.0243  scene_清晨:0.0242        
+style_民谣:0.0241    age_偏老歌:0.0238
 
 ```
 通过http接口可以进行请求：<br>
@@ -124,7 +131,11 @@ http://10.26.5.198/getprofile.php?id=00001990eda04ec86ddb0e239491021b8787309a
 ```
 请求结果如下：<br>
 ```
-{"status":0,"profile":"6_0:1.0000\t11_15:0.7434\t0_0:0.5176\t8_1:0.3550\t4_1:0.3024\t1_2:0.2495\t3_5:0.2369\t0_4:0.1986\t4_2:0.1759\t8_4:0.1643\t5_2:0.1027\t5_4:0.0919\t3_10:0.0834\t5_1:0.0681\t3_1:0.0509\t10_102512:0.0458\t3_6:0.0362\t3_0:0.0356\t10_8396:0.0339\t10_61988:0.0339\t9_6:0.0314\t4_3:0.0293\t9_8:0.0287\t9_13:0.0266\t9_12:0.0262\t0_2:0.0244\t9_10:0.0242\t9_4:0.0239\t5_0:0.0236\t9_1:0.0233"}
+{"status":0,"profile":"6_0:1.0000\t11_15:0.7434\t0_0:0.5176\t8_1:0.3550\t4_1:0.3024\t
+1_2:0.2495\t3_5:0.2369\t0_4:0.1986\t4_2:0.1759\t8_4:0.1643\t5_2:0.1027\t5_4:0.0919\t
+3_10:0.0834\t5_1:0.0681\t3_1:0.0509\t10_102512:0.0458\t3_6:0.0362\t3_0:0.0356\t
+10_8396:0.0339\t10_61988:0.0339\t9_6:0.0314\t4_3:0.0293\t9_8:0.0287\t9_13:0.0266\t
+9_12:0.0262\t0_2:0.0244\t9_10:0.0242\t9_4:0.0239\t5_0:0.0236\t9_1:0.0233"}
 ```
 可见结果跟我们上面展示的并不相同。需要有个map进行映射才行。<br>
 ```
