桃花潭水深千尺，温泉水滑洗凝脂
桃花潭水深千尺，温泉水滑洗凝脂

--- a/数据分析---杂谈.md
+++ b/数据分析---杂谈.md
@@ -1,17 +1,20 @@
 #数据分析---杂谈
 --------------------------------
 ###什么是数据挖掘？
-李小翀，IT经理，目前在一家P2P公司工作
+李小翀，IT经理，目前在一家P2P公司工作:
 ```
 数据挖掘是知识的发现，可以更好的揭示大数据隐藏的秘密，是数据驱动的
 数据分析是知识驱动的，在一定的知识背景下，达到某种确定的分析目标
 ```
-<br>
-Han Hsiao，发现隐藏的价值
+Han Hsiao，发现隐藏的价值:
 ```
 这是个有意思的问题。
 
-由于数据科学刚刚兴起，数据科学家作为一种新生职业被提出，数据研究高级科学家Rachel Schutt将其定义为”计算机科学家、软件工程师和统计学家的混合体“。数据挖掘作为一个学术领域，横跨多个学科，涵盖了统计学、数学、机器学习和数据库等，此外还包括各类专业方向比如从油田电力、海洋生物、历史文本、电子通讯、法律税务等的各个专业领域。注意每一分类都需要相当的行业经验。
+由于数据科学刚刚兴起，数据科学家作为一种新生职业被提出.
+数据研究高级科学家Rachel Schutt将其定义为”计算机科学家、软件工程师和统计学家的混合体。
+数据挖掘作为一个学术领域，横跨多个学科，涵盖了统计学、数学、机器学习和数据库等，
+此外还包括各类专业方向比如从油田电力、海洋生物、历史文本、电子通讯、法律税务等的各个专业领域。
+注意每一分类都需要相当的行业经验。
 
 而要明白某一事物的本质，就需要通过另一些近似的事物特性对比来说明。
 就好像你单独提问什么是男人？很难解释对不对。
@@ -38,7 +41,9 @@ Han Hsiao，发现隐藏的价值
 
 三、数据挖掘
 
-孙悟空和杨戬终极决战。这次咱们根据两位的详细资料（如家庭出身、教育背景、工作经验、婚育情况等）让计算机做协同过滤关联分析。计算机通过数据清洗建模后发现：
+孙悟空和杨戬终极决战。
+这次咱们根据两位的详细资料（如家庭出身、教育背景、工作经验、婚育情况等）让计算机做协同过滤关联分析。
+计算机通过数据清洗建模后发现：
 *贫苦出身的孩子一般比皇亲国戚更能吃苦所以功夫底子更好平时训练更加扎实。
 *战斗经验丰富的斗战胜佛因为平时经常打架擅长利用天时地利环境因素而胜算更大。
 *在都得到大师指点的情况下，贫苦出身的孩子可以利用后天的努力来弥补先天悟性的欠缺。
