--- a/数据分析---杂谈.md
+++ b/数据分析---杂谈.md
@@ -24,11 +24,10 @@ Han Hsiao，发现隐藏的价值:
 一、分析报告
 
 在《大闹天宫》里孙悟空跟二郎神在花果山下大战三百回合，咱来写一篇文章分析。
-*孙悟空有金刚不坏火眼金睛筋斗云七十二般变化加上定海神针身法灵活。
-*二郎神杨戬有三只眼缚妖索哮天犬银袍金甲加上三尖两刃四窍八环刀力量无穷。
+* 孙悟空有金刚不坏火眼金睛筋斗云七十二般变化加上定海神针身法灵活。
+* 二郎神杨戬有三只眼缚妖索哮天犬银袍金甲加上三尖两刃四窍八环刀力量无穷。
 所以在大战开始三百回合时候不相上下，结果后来二郎神派出天兵天将放火烧花果山让大圣慌了心神被偷袭得手
 最后二郎神赢了。分析报告完成。
-
 
 二、统计分析
 
@@ -38,16 +37,15 @@ Han Hsiao，发现隐藏的价值:
 所以可以得出综合预测总体胜率是孙悟空赢面大。
 结论依靠历史记录，使用样本预测总体，根据经验做出假设。统计分析完成。
 
-
 三、数据挖掘
 
 孙悟空和杨戬终极决战。
 这次咱们根据两位的详细资料（如家庭出身、教育背景、工作经验、婚育情况等）让计算机做协同过滤关联分析。
 计算机通过数据清洗建模后发现：
-*贫苦出身的孩子一般比皇亲国戚更能吃苦所以功夫底子更好平时训练更加扎实。
-*战斗经验丰富的斗战胜佛因为平时经常打架擅长利用天时地利环境因素而胜算更大。
-*在都得到大师指点的情况下，贫苦出身的孩子可以利用后天的努力来弥补先天悟性的欠缺。
-*样貌奇特注定孤独终老的神仙总是会比同等条件下美若天仙喜欢拈花惹草处处留情的神仙功夫好。
+* 贫苦出身的孩子一般比皇亲国戚更能吃苦所以功夫底子更好平时训练更加扎实。
+* 战斗经验丰富的斗战胜佛因为平时经常打架擅长利用天时地利环境因素而胜算更大。
+* 在都得到大师指点的情况下，贫苦出身的孩子可以利用后天的努力来弥补先天悟性的欠缺。
+* 样貌奇特注定孤独终老的神仙总是会比同等条件下美若天仙喜欢拈花惹草处处留情的神仙功夫好。
 综上所述，我们可知道：
 论出身两位大神不分伯仲。一个从石头出来，一个是凡人与神仙结合所生。
 悟空的师父菩提老祖（准提道人）和二郎神的师父玉鼎真人的师父元始天尊同为鸿钧老祖的高足所以前者更胜一筹。
@@ -60,4 +58,114 @@ Han Hsiao，发现隐藏的价值:
 分析报告一般是整个事件发生结束以后的总结（马后炮）。
 统计分析能利用大量的历史样本来预测整个事件总体未来的走向（概率）。
 数据挖掘则透过事件的表象发现隐藏在背后的蛛丝马迹，从而找到潜伏的规律以及看似无关事物之间背后的联系。
+```
+###怎么培养数据分析的能力？
+Han Hsiao，预见未来：
+```
+如果想深入学习数据分析的话建议了解一些数据挖掘的知识。
+首先总结下平时数据分析的一般步骤。
+
+<strong>第一步：数据准备：</strong>（70%时间）
+* 获取数据（爬虫，数据仓库）
+* 验证数据
+* 数据清理（缺失值、孤立点、垃圾信息、规范化、重复记录、特殊值、合并数据集）
+* 使用编程语言进行文件读取csv或者txt便于操作数据文件（I/O和文件串的处理）
+* 抽样（大数据时。关键是随机）
+* 存储和归档
+
+<strong>第二步：数据观察</strong>（发现规律和隐藏的关联）
+* 单一变量：点图、抖动图；直方图、核密度估计；累计分布函数
+* 两个变量：散点图、LOESS平滑、残差分析、对数图、倾斜
+* 多个变量：假色图、马赛克图、平行左边图
+
+<strong>第三步：数据建模</strong>
+* 推算和估算（均衡可行性和成本消耗）
+* 缩放参数模型（缩放维度优化问题）
+* 建立概率模型（二项、高斯、幂律、几何、泊松分布与已知模型对比）
+
+<strong>第四步：数据挖掘</strong>
+* 选择合适的机器学习算法（蒙特卡洛模拟，相似度计算，主成分分析）
+* 大数据考虑用Map/Reduce
+* 得出结论，绘制最后图表
+
+循环到第二步到第四步，进行数据分析，根据图表得出结论完成文章。
+
+
+业务分析版：数据作为人类活动的痕迹，就像金矿等待发掘。
+但是首先你得明确自己的业务需求，数据才可能为你所用。
+
+<strong>1. 数据为王，业务是核心</strong>
+* 了解整个产业链的结构
+* 制定好业务的发展规划
+* 衡量的核心指标有哪些
+
+有了数据必须和业务结合才有效果。
+* 首先你需要摸清楚所在产业链的整个结构，对行业的上游和下游的经营情况有大致的了解。
+* 然后根据业务当前的需要，指定发展计划，从而归类出需要整理的数据。
+* 最后一步详细的列出数据核心指标（KPI），并且对几个核心指标进行更细致的拆解，
+  当然具体结合你的业务属性来处理，找出那些对指标影响幅度较大的影响因子。
+  前期资料的收集以及业务现况的全面掌握非常关键。
+
+<strong>2. 思考指标现状，发现多维规律</strong>
+* 熟悉产品框架，全面定义每个指标的运营现状
+* 对比同行业指标，挖掘隐藏的提升空间
+* 拆解关键指标，合理设置运营方法来观察效果
+* 争对核心用户，单独进行产品用研与需求挖掘
+
+发现规律不一定需要很高深的编程方法，或者复杂的统计公式，更重要的是培养一种感觉和意识。
+不能用你的感觉去揣测用户的感觉，因为每个人的教育背景、生活环境都不一样。
+很多数据元素之间的关系没有明显的显示，需要使用直觉与观察（数据可视化技术来呈现）。
+
+<strong>3. 规律验证，经验总结</strong>
+发现了规律之后不能立刻上线，需要在测试机上对模型进行验证。
+
+P.S.数学建模能力对培养数感有一定的帮助
+推荐个论坛：[数学建模与数学应用论坛](http://www.mathsccnu.com/forum.php)
+```
+joegh，《网站分析实战》作者，网站数据分析博客…:
+```
+先从问题本身来回答一下，培养数据分析的能力，简单说就是 理论+实践 
+理论：是进行分析的基础
+1）基础的数据分析知识，至少知道如何做趋势分析、比较分析和细分，不然拿到一份数据就无从下手；
+2）基础的统计学知识，至少基础的统计量要认识，知道这些统计量的定义和适用条件，
+   统计学方法可以让分析过程更加严谨，结论更有说服力；
+3）对数据的兴趣，以及其它的知识多多益善，让分析过程有趣起来。
+
+实践：可以说90%的分析能力都是靠实践培养的
+1）明确分析的目的。
+如果分析前没有明确分析的最终目标，很容易被数据绕进去，最终自己都不知道自己得出的结论到底是用来干嘛的；
+
+2）多结合业务去看数据。
+数据从业务运营中来，分析当然要回归到业务中去，多熟悉了解业务可以使数据看起来更加透彻；
+
+3）了解数据的定义和获取。
+最好从数据最初是怎么获取的开始了解，当然指标的统计逻辑和规则是必须熟记于心的，不然很容易就被数据给坑了；
+
+4）最后就是不断地看数据、分析数据。这是个必经的过程，
+往往一个工作经验丰富的非数据分析的运营人员要比刚进来不久的数据分析师对数据的了解要深入得多，
+```
+马科，技术，艺术: 
+```
+最重要的是形成数据分析的思想、意识，并不断在实践过程中找到数据的关联性，
+挖掘其内在含义，提升自己的数据分析能力，并利用分析结果对未来的工作作出前瞻和指导，
+也同时检验自己的成果。形成闭环，不断提升自己。 
+
+如何养成这样的意识呢？简而言之:
+* 事前，采集历史数据，分析数据关联性，推测可能的模型和影响因子； 
+* 事中，采集线上数据，同前期规划模型作比较，找到实际问题中的亟待解决的问题和模型改善，
+  为进一步产品改进等做可能性、关联性分析； 
+* 事后，归纳数据，发现自己分析的不足、考虑问题的全面性，为接下来的分析工作做经验储备； 
+
+这样的意识就是： 
+* 事前估计，为什么会有这样的预测，有什么样的数据或是模型支持此分析结果； 
+* 事中监测，有哪些突变或是自己尚未前瞻到的异常用户数据，
+  如何将其融合到新一轮的数据分析中，如何更好的为产品改进服务； 
+* 事后总结，在这次事件中有哪些问题，问题的原因出自哪里，
+模型的问题还是客观性或是其他问题，不断提升自己的数据领悟力；
+
+在数据分析中，重数据，却不拘泥于数据；
+考虑模型，但要动态变化；
+不能为数据而数据，应该是客观的评析数据，提出合理的分析结果；
+不断在实践中提升自己的感悟能力，这不是一朝一夕的事。
+数据既为上，又为己，希望你可以理解。
 ```
