--- a/数据分析---杂谈.md
+++ b/数据分析---杂谈.md
@@ -1,12 +1,12 @@
 #数据分析---杂谈
 --------------------------------
 ###什么是数据挖掘？
-李小翀，IT经理，目前在一家P2P公司工作:
+李小翀:
 ```
 数据挖掘是知识的发现，可以更好的揭示大数据隐藏的秘密，是数据驱动的
 数据分析是知识驱动的，在一定的知识背景下，达到某种确定的分析目标
 ```
-Han Hsiao，发现隐藏的价值:
+Han Hsiao:
 ```
 这是个有意思的问题。
 
@@ -32,8 +32,8 @@ Han Hsiao，发现隐藏的价值:
 二、统计分析
 
 大圣二战杨戬。这次在二位大战之前做个数理统计来预测结果。
-*首先根据历史样本史书记载发现两人在之前的五百年里打过100次，其中孙悟空赢60次。
-*然后有记录显示，之前孙悟空和牛魔王战斗的胜率是80%，而杨戬斗牛魔王胜率是70%。
+* 首先根据历史样本史书记载发现两人在之前的五百年里打过100次，其中孙悟空赢60次。
+* 然后有记录显示，之前孙悟空和牛魔王战斗的胜率是80%，而杨戬斗牛魔王胜率是70%。
 所以可以得出综合预测总体胜率是孙悟空赢面大。
 结论依靠历史记录，使用样本预测总体，根据经验做出假设。统计分析完成。
 
@@ -60,12 +60,12 @@ Han Hsiao，发现隐藏的价值:
 数据挖掘则透过事件的表象发现隐藏在背后的蛛丝马迹，从而找到潜伏的规律以及看似无关事物之间背后的联系。
 ```
 ###怎么培养数据分析的能力？
-Han Hsiao，预见未来：
+Han Hsiao：
 ```
 如果想深入学习数据分析的话建议了解一些数据挖掘的知识。
 首先总结下平时数据分析的一般步骤。
 
-<strong>第一步：数据准备：</strong>（70%时间）
+第一步：数据准备：（70%时间）
 * 获取数据（爬虫，数据仓库）
 * 验证数据
 * 数据清理（缺失值、孤立点、垃圾信息、规范化、重复记录、特殊值、合并数据集）
@@ -73,17 +73,17 @@ Han Hsiao，预见未来：
 * 抽样（大数据时。关键是随机）
 * 存储和归档
 
-<strong>第二步：数据观察</strong>（发现规律和隐藏的关联）
+第二步：数据观察（发现规律和隐藏的关联）
 * 单一变量：点图、抖动图；直方图、核密度估计；累计分布函数
 * 两个变量：散点图、LOESS平滑、残差分析、对数图、倾斜
 * 多个变量：假色图、马赛克图、平行左边图
 
-<strong>第三步：数据建模</strong>
+第三步：数据建模
 * 推算和估算（均衡可行性和成本消耗）
 * 缩放参数模型（缩放维度优化问题）
 * 建立概率模型（二项、高斯、幂律、几何、泊松分布与已知模型对比）
 
-<strong>第四步：数据挖掘</strong>
+第四步：数据挖掘
 * 选择合适的机器学习算法（蒙特卡洛模拟，相似度计算，主成分分析）
 * 大数据考虑用Map/Reduce
 * 得出结论，绘制最后图表
@@ -94,7 +94,7 @@ Han Hsiao，预见未来：
 业务分析版：数据作为人类活动的痕迹，就像金矿等待发掘。
 但是首先你得明确自己的业务需求，数据才可能为你所用。
 
-<strong>1. 数据为王，业务是核心</strong>
+1. 数据为王，业务是核心
 * 了解整个产业链的结构
 * 制定好业务的发展规划
 * 衡量的核心指标有哪些
@@ -106,7 +106,7 @@ Han Hsiao，预见未来：
   当然具体结合你的业务属性来处理，找出那些对指标影响幅度较大的影响因子。
   前期资料的收集以及业务现况的全面掌握非常关键。
 
-<strong>2. 思考指标现状，发现多维规律</strong>
+2. 思考指标现状，发现多维规律
 * 熟悉产品框架，全面定义每个指标的运营现状
 * 对比同行业指标，挖掘隐藏的提升空间
 * 拆解关键指标，合理设置运营方法来观察效果
@@ -116,13 +116,13 @@ Han Hsiao，预见未来：
 不能用你的感觉去揣测用户的感觉，因为每个人的教育背景、生活环境都不一样。
 很多数据元素之间的关系没有明显的显示，需要使用直觉与观察（数据可视化技术来呈现）。
 
-<strong>3. 规律验证，经验总结</strong>
+3. 规律验证，经验总结
 发现了规律之后不能立刻上线，需要在测试机上对模型进行验证。
 
 P.S.数学建模能力对培养数感有一定的帮助
 推荐个论坛：[数学建模与数学应用论坛](http://www.mathsccnu.com/forum.php)
 ```
-joegh，《网站分析实战》作者，网站数据分析博客…:
+joegh:
 ```
 先从问题本身来回答一下，培养数据分析的能力，简单说就是 理论+实践 
 理论：是进行分析的基础
@@ -144,7 +144,7 @@ joegh，《网站分析实战》作者，网站数据分析博客…:
 4）最后就是不断地看数据、分析数据。这是个必经的过程，
 往往一个工作经验丰富的非数据分析的运营人员要比刚进来不久的数据分析师对数据的了解要深入得多，
 ```
-马科，技术，艺术: 
+马科: 
 ```
 最重要的是形成数据分析的思想、意识，并不断在实践过程中找到数据的关联性，
 挖掘其内在含义，提升自己的数据分析能力，并利用分析结果对未来的工作作出前瞻和指导，
@@ -168,4 +168,122 @@ joegh，《网站分析实战》作者，网站数据分析博客…:
 不能为数据而数据，应该是客观的评析数据，提出合理的分析结果；
 不断在实践中提升自己的感悟能力，这不是一朝一夕的事。
 数据既为上，又为己，希望你可以理解。
+```
+###数据分析方法论是什么？
+何史提：
+```
+很多学生或初入职的人，在做数据分析的时候，往往太注重技术细节和工具，而忽略了问题的全面性认识。
+我们做数据分析多为了解决问题，做数据往往只是手段。
+如果我们不清楚分析的目的，或对业务缺乏认识，或沉醉于高级数学技巧，我们做的就脱离实际。
+做数据分析时，我们的思维引导分析的过程，而不是分析结果影响我们的思想。
+
+所谓数据分析方法论，是思想引导。
+这些方法论都帮助我们建立思路，在开始做繁複的计算前想好了全盘棋局。
+
+常用的数据分析方法论如下：
+PEST分析法：
+用于对宏观环境的分析，包括政治（political）、经济（economic）、社会（social）和技术（technological）四方面。
+
+5W2H分析法：
+何因（Why）、何事（What）、何人（Who）、何时（When）、
+何地（Where）、如何就（How）、何价（How much）。
+
+逻辑树分析法：把问题的所有子问题分层罗列。
+
+4P营销理论：
+分析公司的整体营运情况，包括产品（product）、价格（price）、渠道（place）、促销（promotion）四大要素。
+
+用户行为理论：
+主要用于网站流量分析，如回访者、新访者、流失率等，在众多指标中选择一些适用的。
+
+这些方法都帮助我们思考，但这不是死板的过程，有时我们可根据需要结合使用。
+前提时，我们要了解问题的全面和公司的业务。
+```
+###如何成为一名数据科学家？
+Han Hsiao
+```
+引用Thomas H. Davenport和 D.J. Patil的话来总结数据科学家需要具备的能力：
+* 数据科学家倾向于用探索数据的方式来看待周围的世界。（好奇心）
+
+* 把大量散乱的数据变成结构化的可供分析的数据，还要找出丰富的数据源，
+整合其他可能不完整的数据源，并清理成结果数据集。（问题分体整理能力）
+
+* 新的竞争环境中，挑战不断地变化，新数据不断地流入，数据科学家需要帮
+助决策者穿梭于各种分析，从临时数据分析到持续的数据交互分析。（快速学习能力）
+
+* 数据科学家会遇到技术瓶颈，但他们能够找到新颖的解决方案。（问题转化能力）
+
+* 当他们有所发现，便交流他们的发现，建议新的业务方向。（业务精通）
+
+* 他们很有创造力的展示视觉化的信息，也让找到的模式清晰而有说服力。（表现沟通能力）
+
+* 他们会把蕴含在数据中的规律建议给Boss，从而影响产品，流程和决策。（决策力）
+
+
+数据科学家所需硬件技能：
+《数据之美 Beautiful Data》的作者Jeff Hammerbacher在书中提到，对于Facebook的数据科学家
+“我们发现传统的头衔如商业分析师、统计学家、工程师和研究科学家都不能确切地定义我们团队的
+角色。该角色的工作是变化多样的：
+
+在任意给定的一天，团队的一个成员可以用 Python 实现一个多阶段的处理管道流、设计假设检验、
+用工具R在数据样本上执行回归测试、在 Hadoop 上为数据密集型产品或服务设计和实现算法，或者
+把我们分析的结果以清晰简洁的方式展示给企业的其他成员。
+为了掌握完成这多方面任务需要的技术，我们创造了数据科学家这个角色。”
+
+(1) 计算机科学：
+一般来说，数据科学家大多要求具备编程、计算机科学相关的专业背景。
+简单来说，就是对处理大数据所必需的Hadoop、Mahout等大规模并行处理技术与机器学习相关的技能。
+
+(2) 数学、统计、数据挖掘等：
+除了数学、统计方面的素养之外，还需要具备使用SPSS、SAS等主流统计分析软件的技能。
+其中，面向统计分析的开源编程语言及其运行环境“R”最近备受瞩目。
+R的强项不仅在于其包含了丰富的统计分析库，而且具备将结果进行可视化的高品质图表生
+成功能，并可以通过简单的命令来运行。此外，它还具备称为CRAN的包扩展机制，通过导入
+扩展包就可以使用标准状态下所不支持的函数和数据集。
+R语言虽然功能强大，但是学习曲线较为陡峭。
+个人建议从python入手，拥有丰富的statistical libraries，NumPy ，SciPy.org ，
+Python Data Analysis Library，matplotlib: python plotting。
+
+(3) 数据可视化（Visualization）：
+信息的质量很大程度上依赖于其表达方式。
+对数字罗列所组成的数据中所包含的意义进行分析，开发Web原型，使用外部API将图表、地图、Dashboard等
+其他服务统一起来，从而使分析结果可视化，这是对于数据科学家来说十分重要的技能之一。
+
+(4) 跨界为王
+麦肯锡认为未来需要更多的"translators"，能够在IT技术，数据分析和商业决策之间架起一座桥梁的
+复合型人才是最被人需要的。"translators"可以驱动整个数据分析战略的设计和执行，同时连接的IT，
+数据分析和业务部门的团队。如果缺少"translators"，即使拥有高端的数据分析策略和工具方法也是于事无补的。
+
+
+西北大学工程学院下成立一个主攻大数据分析课程的分析学研究生院并这样解释：
+"虽然只要具备一些Hadoop和Cassandra的基本知识就很容易找到工作，但拥有深入知识的人才却是十分缺乏的。"
+此外，该研究生院的课程计划以"传授和指导将业务引向成功的技能，培养能够领导项目团队的优秀分析师"为目标，
+授课内容在数学、统计学的基础上，融合了尖端计算机工程学和数据分析。
+课程预计将涵盖分析领域中主要的三种数据分析方法：
+预测分析、描述分析（商业智能和数据挖掘）和规范分析（优化和模拟），具体内容如下。
+
+(1) 秋学期
+* 数据挖掘相关的统计方法（多元Logistic回归分析、非线性回归分析、判别分析等）
+* 定量方法（时间轴分析、概率模型、优化）
+* 决策分析（多目的决策分析、决策树、影响图、敏感性分析）
+* 树立竞争优势的分析（通过项目和成功案例学习基本的分析理念）
+
+(2) 冬学期
+* 数据库入门（数据模型、数据库设计）
+* 预测分析（时间轴分析、主成分分析、非参数回归、统计流程控制）
+* 数据管理（ETL（Extract、Transform、Load）、数据治理、管理责任、元数据）
+* 优化与启发（整数计划法、非线性计划法、局部探索法、超启发（模拟退火、遗传算法））
+
+(3) 春学期
+* 大数据分析（非结构化数据概念的学习、MapReduce技术、大数据分析方法）
+* 数据挖掘（聚类（k-means法、分割法）、关联性规则、因子分析、存活时间分析）
+* 其他，以下任选两门（社交网络、文本分析、Web分析、财务分析、服务业中的分析、能源、
+  健康医疗、供应链管理、综合营销沟通中的概率模型）
+
+(4) 秋学期
+* 风险分析与运营分析的计算机模拟
+* 软件层面的分析学（组织层面的分析课题、IT与业务用户、变革管理、数据课题、结果的展现与传达方法）
+
+可以利用上面提及的西北大学的课程，自己来学习相关方向。
+
 ```
