一朝被蛇咬，处处闻啼鸟
一朝被蛇咬，处处闻啼鸟

--- a/音频广告推送模型---日常开发记录1.md
+++ b/音频广告推送模型---日常开发记录1.md
@@ -38,7 +38,7 @@
 
 2 从上面可以看出账号系统的重要性。益处实在是多，它可以跨产品集成信息，公司业务越大，带来的优势越明显。
 
-## 更新(2014-10-28)：
+## 更新：
 1 <strong>获取用户播放信息方式变更</strong><br>
 之前的设计有个缺陷，就是我们数据库中的用户播放行为数据并不是实时插入的，这些中间层是以天为单位进行写入的。而大表是以小时为单位写入的。而我要求的实时性是要以秒为单位的。所以我们的数据表并不能支撑之前的设计。所有有所更改：由web-rd给我传递，然后我再添加一些维度来计算。<br>
 web-rd给我传递：userid，baiduid，cuid，地理信息，songid，singerid。<br>
@@ -52,6 +52,59 @@ rpc([远程过程调用协议_百度百科](http://baike.baidu.com/view/7287257.
 2.1 配置maven：<br>
 maven简介：<br>
 Maven是一个采用纯Java编写的开源项目管理工具。Maven采用了一种被称之为project object model(POM)概念来管理项目，所有的项目配置信息都被定义在一个叫做POM.xml的文件中，通过该文件，Maven可以管理项目的整个声明周期，包括编译，构建，测试，发布，报告等等。<br>
+
+3 libsvm中的svm_node是一个包含index和value的对象。<br>
+
+4 不断的打印出当前的信息，是调试程序的一个不错方式。<br>
+
+5 svm_parameter.java 中可以看到各种参数的名称，以及对应值。<br>
+
+6 svm_train.java中的parse_command_line方法用户解析参数，其中也提供了默认参数的配置，若是需要改变默认函数，则在这里进行修改。<br>
+
+7 libsvm在处理预测是，使用的是导入文件进行读取，再把结果保存在文件中。<br>
+  这种方式并不适合我们一条条判断的方式，因此需要对libsvm的源代码进行下改写。<br>
+  原则：不在原来的方法上直接进行修改。而是仿照方法再写一个新的方法。这样保证可回退性和可选择性。<br>
+
+8 对于cuid判断预测时，需要逐个加载model：<br>
+```java
+     StringBuffer sb  = new StringBuffer();
+     for(int i = 0 ;i<TAGS.TAGS.length;i++){
+    	 String model = TAGS.TAGS[i]+".model";
+ 		
+ 		String[] argvPredict = { 
+ 				cuid_result, // 预测文件
+ 				model // 模型文件
+ 		};
+ 		try {
+ 			sb.append(svm_predict.predictStr(argvPredict));
+ 		} catch (IOException e) {
+ 			return ENUM.DEFALUT_RESULT;
+ 		}
+     }//for
+```
+这样的性能时间约为750ms，太耗时了。<br>
+svm.java中是这样加载model的：<br>
+```java
+public static svm_model svm_load_model(String model_file_name) throws IOException
+	{
+		return svm_load_model(new BufferedReader(new FileReader(model_file_name)));
+	}
+```
+使用static块处理，这样在程序运行之前，就加载到内存中，并且只加载一次：<br>
+```java
+public static svm_model[] SVM_MODELS = new svm_model[TAGS.TAGS.length];
+	static{
+		for(int i = 0;i<SVM_MODELS.length;i++)
+			try {
+				SVM_MODELS[i] =svm.svm_load_model(new BufferedReader(new FileReader(TAGS.TAGS[i]+".model")));
+			} catch (FileNotFoundException e) {
+				e.printStackTrace();
+			} catch (IOException e) {
+				e.printStackTrace();
+			}	
+	}
+```
+
 
 
 ###参考文献：
