--- a/音频广告推送模型---日常开发记录1.md
+++ b/音频广告推送模型---日常开发记录1.md
@@ -90,6 +90,7 @@ public static svm_model svm_load_model(String model_file_name) throws IOExceptio
 		return svm_load_model(new BufferedReader(new FileReader(model_file_name)));
 	}
 ```
+
 使用static块处理，这样在程序运行之前，就加载到内存中，并且只加载一次：<br>
 ```java
 public static svm_model[] SVM_MODELS = new svm_model[TAGS.TAGS.length];
@@ -104,6 +105,249 @@ public static svm_model[] SVM_MODELS = new svm_model[TAGS.TAGS.length];
 			}	
 	}
 ```
+9 java调用python脚本，并传递参数。<br>
+下例中，java调用py脚本，并传递参数liu，而py脚本打印出参数:<br>
+```java
+public static void main(String[] args) throws Exception {
+		Process pr = Runtime.getRuntime().exec("python C:\\Python27\\liu.py liu");
+		BufferedReader in = new BufferedReader(
+				new InputStreamReader(pr.getInputStream()));
+		String line = null;
+		while((line = in.readLine()) != null){
+			System.out.println(line);
+		}
+	}
+```
+```python
+import sys
+
+print(sys.argv[1])
+```
+10 将Unicode转成汉字形式：<br>
+```java
+//将Unicode转成汉字。
+public static String convert(String utfString){
+	StringBuilder sb = new StringBuilder();
+	int i = -1;
+	int pos = 0;
+		
+	while((i=utfString.indexOf("\\u", pos)) != -1){
+		sb.append(utfString.substring(pos, i));
+		if(i+5 < utfString.length()){
+			pos = i+6;
+			sb.append((char)Integer.parseInt(utfString.substring(i+2, i+6), 16));
+		}
+	}		
+	return sb.toString();
+}
+```
+11 java代码的http请求与响应。<br>
+需要引入相应的包：<br>
+```java
+import java.net.URL;
+import java.net.URLConnection
+
+public static String sendGet(String url, String param) {
+        String result = "";
+        BufferedReader in = null;
+        try {
+            String urlNameString = url + "?" + param;
+            URL realUrl = new URL(urlNameString);
+            // 打开和URL之间的连接
+            URLConnection connection = realUrl.openConnection();
+            // 设置通用的请求属性
+            connection.setRequestProperty("accept", "*/*");
+            connection.setRequestProperty("connection", "Keep-Alive");
+            connection.setRequestProperty("user-agent",
+                    "Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1;SV1)");
+            // 建立实际的连接
+            connection.connect();
+
+
+            // 获取所有响应头字段
+            //Map<String, List<String>> map = connection.getHeaderFields();
+            // 遍历所有的响应头字段
+            //for (String key : map.keySet()) {
+               // System.out.println(key + "--->" + map.get(key));
+            //}
+
+
+            // 定义 BufferedReader输入流来读取URL的响应
+            in = new BufferedReader(new InputStreamReader(
+                    connection.getInputStream()));
+            String line;
+            while ((line = in.readLine()) != null) {
+                result += line;
+            }
+        } catch (Exception e) {
+            System.out.println("发送GET请求出现异常！" + e);
+            e.printStackTrace();
+        }
+        // 使用finally块来关闭输入流
+        finally {
+            try {
+                if (in != null) {
+                    in.close();
+                }
+            } catch (Exception e2) {
+                e2.printStackTrace();
+            }
+        }
+        return result;
+    }
+```
+12 对cuid处理成指定格式后的预测流程：<br>
+12.1 逐个加载训练好的model，逐个进行判断。<br>
+```java
+public static String predict(String cuid_result) {
+	StringBuffer sb = new StringBuffer();
+	for (int i = 0; i < TAGS.TAGS.length; i++) {
+		String[] argvPredict = { 
+			uid_result, // 预测文件
+			i + "" // 模型文件索引
+		};
+		try {
+			sb.append(svm_predict.predictStr(argvPredict));
+		} catch (IOException e) {
+			return ENUM.DEFALUT_RESULT;
+		}
+	}// for
+	return addGender_Age(sb);
+}
+```
+12.2 把每个维度的索引和值读取出来，分别放在svm_node中，再进行预测。<br>
+```java
+static String predictStr(String argv[]) throws IOException {
+	String output = "";
+	svm_print_string = svm_print_stdout;
+	try {
+
+		String input = argv[0];
+		int num = Integer.parseInt(argv[1]);
+		svm_model model = ENUM.SVM_MODELS[num];
+
+		·····
+
+		StringTokenizer st = new StringTokenizer(input, " \t\n\r\f:");
+
+		int m = st.countTokens() / 2;//除2,是因为上面的分割有冒号。这样才是维度数。
+		svm_node[] x = new svm_node[m];
+		for (int j = 0; j < m; j++) {
+			x[j] = new svm_node();
+			x[j].index = atoi(st.nextToken());
+			x[j].value = atof(st.nextToken());
+		}
+
+		double v;
+		v = svm.svm_predict(model, x);
+		output = (int) v + "";
+
+	} catch (ArrayIndexOutOfBoundsException e) {
+		exit_with_help();
+	}
+	return output;
+}
+```
+12.3 根据svm_type，来调用具体的执行：<br>
+```java
+public static double svm_predict(svm_model model, svm_node[] x)
+{
+	int nr_class = model.nr_class;
+	double[] dec_values;
+
+	if(model.param.svm_type == svm_parameter.ONE_CLASS ||
+			model.param.svm_type == svm_parameter.EPSILON_SVR ||
+			model.param.svm_type == svm_parameter.NU_SVR)
+		dec_values = new double[1];
+	else
+		dec_values = new double[nr_class*(nr_class-1)/2];
+
+	double pred_result = svm_predict_values(model, x, dec_values);
+	return pred_result;
+	}
+```
+注：在svm_train.java中可以看到，在训练时设定的参数值是：<br>
+```java
+param.svm_type = svm_parameter.C_SVC;
+param.kernel_type = svm_parameter.LINEAR;
+param.degree = 3;
+······
+```
+12.4 真正的具体预测：<br>
+```java
+public static double svm_predict_values(svm_model model, svm_node[] x, double[] dec_values)
+	{
+		int i;
+		if(model.param.svm_type == svm_parameter.ONE_CLASS ||
+		   model.param.svm_type == svm_parameter.EPSILON_SVR ||
+		   model.param.svm_type == svm_parameter.NU_SVR)
+		{
+			·····
+		}
+		else
+		{
+			int nr_class = model.nr_class;
+			int l = model.l;
+		
+			double[] kvalue = new double[l];
+			for(i=0;i<l;i++)
+				kvalue[i] = Kernel.k_function(x,model.SV[i],model.param);
+
+			int[] start = new int[nr_class];
+			start[0] = 0;
+			for(i=1;i<nr_class;i++)
+				start[i] = start[i-1]+model.nSV[i-1];
+
+			int[] vote = new int[nr_class];
+			for(i=0;i<nr_class;i++)
+				vote[i] = 0;
+
+			int p=0;
+			for(i=0;i<nr_class;i++)
+				for(int j=i+1;j<nr_class;j++)
+				{
+					double sum = 0;
+					int si = start[i];
+					int sj = start[j];
+					int ci = model.nSV[i];
+					int cj = model.nSV[j];
+				
+					int k;
+					double[] coef1 = model.sv_coef[j-1];
+					double[] coef2 = model.sv_coef[i];
+					for(k=0;k<ci;k++)
+						sum += coef1[si+k] * kvalue[si+k];
+					for(k=0;k<cj;k++)
+						sum += coef2[sj+k] * kvalue[sj+k];
+					sum -= model.rho[p];
+					dec_values[p] = sum;					
+
+					if(dec_values[p] > 0)
+						++vote[i];
+					else
+						++vote[j];
+					p++;
+				}
+
+			int vote_max_idx = 0;
+			for(i=1;i<nr_class;i++)
+				if(vote[i] > vote[vote_max_idx])
+					vote_max_idx = i;
+
+			return model.label[vote_max_idx];
+		}
+	}
+```
+线性核函数的具体方式为：<br>
+```java
+if(x[i].index == y[j].index)
+	sum += x[i++].value * y[j++].value;
+```
+todo list:<br>
+1 部署问题<br>
+2 调用本地Python脚本调用的java版本改写<br>
+3 确定准确的阈值，重新训练新的model<br>
+
 
 
 
