满堂花醉三千客，更无一人是知音。
满堂花醉三千客，更无一人是知音。

--- a/音频广告推送算法---v1.0流程分析.md
+++ b/音频广告推送算法---v1.0流程分析.md
@@ -191,6 +191,10 @@ cuid和baiduid不会同时出现。
 4:app_interest_normalized:休闲益智|50 银行|17 手机通讯|11 角色扮演|20 存储|50 文件管理|65 日历|16 支付|50 书城|50 词典|50 图片美化|7 即时通讯|64 游戏|22 电子邮件|19 手机安全|12 火车|38 音乐|100 拍照|13 社交|82 计算器|11 输入法|50 锁屏|11 搜索|13 桌面|68 省电|48 豌豆荚|100 通讯录|9 游戏模拟器|20 阅读|30 同志交友|78 地理|28 地图导航|100 浏览器|55 手机美化|59 性能优化|50 微博|69 城市经营|5 图片|69 常用工具|20 SRPG|56 博客|26
 5:long_term_interest_normalized:旅游|49 汽车|55 成人色情|58 阅读|60 个护美容|49 生活服务|61 汽车/欧洲品牌/奔驰|4 汽车/汽车档次/中档汽车（10w~30w）|1 房产家居|52 手机|63 军事|61 阅读/奇幻玄幻小说|44 手机/中档手机|4 影视/电视剧|59 汽车/日本品牌/本田|55 教育培训|57 工作|65 宠物|61 游戏|64 体育健身|53 游戏/游戏分类/手机游戏|35 游戏/游戏分类|60 游戏/游戏分类/单机游戏|59 音乐|66 医疗/妇科疾病|10 游戏/游戏分类/网页游戏|46 游戏/游戏分类/大型网游|59 数码|51 交通票务/汽车票|32 母婴|2 交通票务/火车票|46 母婴/有小孩/婴儿期（0-1岁）|15 影视|65 医疗|65 金融财经|44 母婴/有小孩|3 交通票务|57 影视/电影|59 购物|58 汽车/日本品牌|18 其它|67 汽车/欧洲品牌|1 创业|57 餐饮|19 出国|35
 ```
+添加缓存机制之后，此时的整体流程图为：<br>
+![用户特征模块所处位置](/images/20141117_zhengti.png)
+而具体的用户模块也有所调整：<br>
+![用户特征模块](/images/20141117_liucheng.png)
 
 --------------------------------
 ######（转载本站文章请注明作者和出处 https://github.com/MangoLiu ，请勿用于任何商业用途）
