问君能有几多愁，别是一番滋味在心头
问君能有几多愁，别是一番滋味在心头

--- a/音频广告推送算法---v1.0流程分析.md
+++ b/音频广告推送算法---v1.0流程分析.md
@@ -7,7 +7,7 @@
 ## 输入
 --------------------------------
 输入是由广告主决定的：  
-    1 音频广告的标签，可能会有多个。
+    1 音频广告的标签，可能会有多个。<br>
     2 每次推送的次数(我们也可以根据具体的标签给他一个次数的建议)<br>
 
 ## 我们需要做的事情：
@@ -192,7 +192,10 @@ cuid和baiduid不会同时出现。
 5:long_term_interest_normalized:旅游|49 汽车|55 成人色情|58 阅读|60 个护美容|49 生活服务|61 汽车/欧洲品牌/奔驰|4 汽车/汽车档次/中档汽车（10w~30w）|1 房产家居|52 手机|63 军事|61 阅读/奇幻玄幻小说|44 手机/中档手机|4 影视/电视剧|59 汽车/日本品牌/本田|55 教育培训|57 工作|65 宠物|61 游戏|64 体育健身|53 游戏/游戏分类/手机游戏|35 游戏/游戏分类|60 游戏/游戏分类/单机游戏|59 音乐|66 医疗/妇科疾病|10 游戏/游戏分类/网页游戏|46 游戏/游戏分类/大型网游|59 数码|51 交通票务/汽车票|32 母婴|2 交通票务/火车票|46 母婴/有小孩/婴儿期（0-1岁）|15 影视|65 医疗|65 金融财经|44 母婴/有小孩|3 交通票务|57 影视/电影|59 购物|58 汽车/日本品牌|18 其它|67 汽车/欧洲品牌|1 创业|57 餐饮|19 出国|35
 ```
 添加缓存机制之后，此时的整体流程图为：<br>
-![用户特征模块所处位置](/images/20141117_zhengti.png)
+![用户特征模块所处位置](/images/20141117_zhengti.png)<br>
+1 web负责与广告库通信，负责具体的投放策略和投放行为。<br>
+2 web通过缓存模块来查找用户的的特征，当查询不到时，缓存模块会调用用户特征识别模块。<br>
+3 缓存模块会传递id值及类型，等待用户特征模块的判定。之后，将结果返回给web端，并且再本地保存一份以备后续。<br>
 而具体的用户模块也有所调整：<br>
 ![用户特征模块](/images/20141117_liucheng.png)
 
