眼睛都要看瞎了
眼睛都要看瞎了

--- a/杂记---面试别人，我会问些什么？.md
+++ b/杂记---面试别人，我会问些什么？.md
@@ -27,6 +27,7 @@
 
 ###举例
 --------------------------------
+<strong>技术类：</strong><br>
 1 组合数学中的趣味问题。<br>
 2 在打字和code的过程中，按键最多的字母有哪些？先估计下。若是让你去做，你会怎么样做？<br>
 3 读取一个指定文本，做些简单的事情，在写到指定文本。酌情不断地增加难度和要求。<br>
@@ -36,7 +37,15 @@
 7 SVM如何做多分类任务？<br>
 8 libsvm的使用流程？<br>
 9 使用脚本写一个功能：统计一个文件下的代码行数。<br>
+10 可否提供以前的代码段，报告或是文章等。<br>
 
+
+
+
+<br>
+<strong>非技术类：</strong><br>
+1 列举一些有趣的或是经常去的数据咨询类网站。<br>
+2 有什么兴趣爱好，到什么程度？<br>
 
 --------------------------------
 ######（转载本站文章请注明作者和出处 https://github.com/MangoLiu ，请勿用于任何商业用途）
