--- a/音频广告推送模型---日常开发记录1.md
+++ b/音频广告推送模型---日常开发记录1.md
@@ -343,10 +343,14 @@ public static double svm_predict_values(svm_model model, svm_node[] x, double[] 
 if(x[i].index == y[j].index)
 	sum += x[i++].value * y[j++].value;
 ```
-todo list:<br>
-1 部署问题<br>
-2 调用本地Python脚本调用的java版本改写<br>
-3 确定准确的阈值，重新训练新的model<br>
+13 项目的导出与执行。<br>
+将项目右键，导出为jar文件，并指定main函数所在位置。<br>
+配置好环境变量path，classpath以及java_home后，通过命令来执行：<br>
+```java
+java -jar XXX.jar param1 param2...
+```
+注意：在打成jar包的时候，一些外在依赖文件如model文件，是没有打进来的。这样在利用这些文件时，需要以绝对路径指明。<br>
+
 
 
 
