--- a/杂记---面试别人，我会问些什么？.md
+++ b/杂记---面试别人，我会问些什么？.md
@@ -4,7 +4,7 @@
 1 <strong>看积累</strong>
 >   1.1 个人代码(github)<br>
     1.2 个人博客<br>
-    1.3 个人兴趣(知乎)<br>
+    1.3 个人兴趣(知乎等)<br>
 
 2 <strong>看学校，看学历<br></strong>
   考虑时间筛选成本，比较简单有效的方式。
@@ -14,7 +14,7 @@
   耗时，但最看人最准。
 
 4 <strong>基础知识<br></strong>
-  网络，数据库，软件工程，体统结构等。<br>
+  网络，数据库，软件工程，体统结构，概率论，组合数学等。<br>
   无明显缺陷即可。
 
 5 <strong>算法，数学，逻辑思维</strong><br>
@@ -38,6 +38,8 @@
 8 libsvm的使用流程？<br>
 9 使用脚本写一个功能：统计一个文件下的代码行数。<br>
 10 可否提供以前的代码段，报告或是文章等。<br>
+11 隐性马尔科夫模型。<br>
+12 k-近邻算法。<br>
 
 
 
