唉，玉石！玉石！
唉，玉石！玉石！

--- a/音频广告推送模型---日常开发记录1.md
+++ b/音频广告推送模型---日常开发记录1.md
@@ -351,7 +351,23 @@ java -jar XXX.jar param1 param2...
 ```
 注意：在打成jar包的时候，一些外在依赖文件如model文件，是没有打进来的。这样在利用这些文件时，需要以绝对路径指明。<br>
 
+14 erised提供的Python脚本获取的http接口的信息。通过拼接地址及其参数并不能获得期待结果。
+```python
+url_data =  {
+            'id_value': src_id_value,
+            'id_type': src_id_type,
+            'also_do_id_mapping': 'true'
+            };
+                  
+response_data = urllib2.urlopen('http://m1-dt-upstest01.m1.baidu.com:8877/query', urllib.urlencode(url_data), 5).read()
+```
+推断出参数的传递是以post形式传递的。以java中的HttpRequest的sendPost方法进行发送，结果返回为String形式。<br>
 
+15 当文本串中出现“\n”或是“\t”等转意的字面值时，若是想用其作为切割标记，需要在代码中写为“\\\\n”或是“\\\\t”。例如：<br>
+```java
+String[] array = str.split("\\\\n");
+```
+16 
 
 
 
