--- a/杂记---面试别人，我会问些什么？.md
+++ b/杂记---面试别人，我会问些什么？.md
@@ -48,6 +48,7 @@
 <strong>非技术类：</strong><br>
 1 列举一些有趣的或是经常去的数据咨询类网站。<br>
 2 有什么兴趣爱好，到什么程度？<br>
+3 最近在读什么人文社科的书？<br>
 
 --------------------------------
 ######（转载本站文章请注明作者和出处 https://github.com/MangoLiu ，请勿用于任何商业用途）
