做一个有趣的人。
做一个有趣的人。

--- a/音频广告推送模型---日常开发记录1.md
+++ b/音频广告推送模型---日常开发记录1.md
@@ -367,7 +367,12 @@ response_data = urllib2.urlopen('http://m1-dt-upstest01.m1.baidu.com:8877/query'
 ```java
 String[] array = str.split("\\\\n");
 ```
-16 
+16 java改写Python脚本的请求时间问题。<br>
+真正的http请求响应时间为50ms;<br>
+响应结果读入到流中的时间为650ms;<br>
+把流中的内容拼接成字符串进行返回的时间为30ms;<br>
+根据返回的字符串判读各个标签的时间10ms。<br>
+
 
 
 
