我现在的境况是，横走玉米地，一步一个坎。
我现在的境况是，横走玉米地，一步一个坎。

--- a/音频广告推送模型---日常开发记录1.md
+++ b/音频广告推送模型---日常开发记录1.md
@@ -373,6 +373,51 @@ String[] array = str.split("\\\\n");
 把流中的内容拼接成字符串进行返回的时间为30ms;<br>
 根据返回的字符串判读各个标签的时间10ms。<br>
 
+17 java相对路径的改写<br>
+```java
+public static String FILE = "D:\\workspace\\music_ads\\file\\";
+//改写为：当前目录下的file目录下运行。
+public static String FILE = "./file/";
+```
+按照以上方式写，在windows下，是可以正常工作的。但是移植到linux下，就会发生找不到文件的异常。<br>
+这是Linux和Windows在Work directory上设置的不同。<br>
+
+大家都知道，对于Windows而言，应用程序的默认工作目录就是应用程序所在的目录，它一般是不管应用程序是从哪个目录上下文启动的。那么在不更改工作目录的情况下，读文件使用相对目录就肯定是相于应用程序所在的目录。<br>
+
+但对于Linux而言，应用程序的默认工作目录就不同了，它是默认是继承启动它的进程的工作目录的，也就是说，如果进程是在其它目录下启动，那应用程序的工作目录默认就在其它的目录下。这样的话使用相对路径访问文件就有很大的不确定性：我们永远也不能保证，用户一定是从应用程序所在的目录启动！<br>
+
+因为每隔一段时间，才进行更新一次model。大约1个月才更新一次。所以采用人工更新的话，那么就在机器上使用绝对路径的方式。<br>
+
+18 配置机器的环境变量：
+```
+永久办法：
+vi /etc/profile：
+添加：
+JAVA_HOME=/home/bae/ci/CI/bin/jdk1.6.0_06
+PATH=$PATH:/usr/share/baidu/bin:$JAVA_HOME/bin
+CLASSPATH=.:$JAVA_HOME/lib/dt.jar:$JAVA_HOME/lib/tools.jar
+export JAVA_HOME
+export PATH
+export CLASSPATH
+
+临时办法：
+export JAVA_HOME=/home/bae/ci/CI/bin/jdk1.6.0_06
+export PATH=$PATH:/usr/share/baidu/bin:$JAVA_HOME/bin
+export CLASSPATH=.:$JAVA_HOME/lib/dt.jar:$JAVA_HOME/lib/tools.jar
+```
+
+19 现在打成jar包，通过java命令去调用。但是每次调用java -jar ads.jar param1 param2 时都相当于一次次独立的调用这个jar模块，导致时间非常慢。<br>
+```
+bae@db-ting-apptest03.vm ~/tmp/liu$ time java -jar ads.jar 3 1496
+01111001101011000115
+
+real	0m0.112s
+user	0m0.030s
+sys	0m0.024s
+```
+可以看到在本地的运行时间是2ms，但是在服务端起服务，由于加载jar的缘故，导致计算时间达到112ms。<br>
+
+
 
 
 
