--- a/音频广告推送模型---日常开发记录1.md
+++ b/音频广告推送模型---日常开发记录1.md
@@ -417,6 +417,58 @@ sys	0m0.024s
 ```
 可以看到在本地的运行时间是2ms，但是在服务端起服务，由于加载jar的缘故，导致计算时间达到112ms。<br>
 
+具体再来看一下：<br>
+服务器上使用jar的方式：<br>
+>
+   userid  2380ms <br>
+    cuid    728ms <br>
+    baiduid 111ms <br>
+在本地机器上运行的时间：<br>
+>
+   userid  954ms <br>
+    cuid    381ms <br>
+    baiduid 2ms <br>
+若以25%，25%，50%的比例来算，jar的期望时间为832.5ms；本地的期望时间是335.75ms。<br>
+解决方案：<br>
+a. 不用jar的方式提供服务，而是配置tomcat，提供web服务。<br>
+b. 优化内部代码。一定有优化的余地。<br>
+
+20 提供web服务:<br>
+a.[tomcat本地配置](http://jingyan.baidu.com/article/8065f87fcc0f182330249841.html)<br>
+b.[为web项目添加struts框架](http://jingyan.baidu.com/article/7082dc1c56cd18e40a89bdef.html)<br>
+c.配置web.xml：<br>
+```xml
+<servlet>
+    <servlet-name>ads</servlet-name>
+    <servlet-class>adServlet</servlet-class>(具体的处理函数)
+</servlet>
+
+<servlet-mapping>
+    <servlet-name>ads</servlet-name>  (对内的使用名称，和上面的servlet-name里面的值一致即可)
+    <url-pattern>/ads</url-pattern>  (对外的匹配名称)
+</servlet-mapping>
+```
+d.编写servlet代码：<br>
+```java
+public class adServlet extends HttpServlet {
+	@Override
+	protected void doPost(HttpServletRequest req, HttpServletResponse resp)
+	   throws ServletException, IOException {
+	    doGet(req,resp);
+	}
+
+	 @Override
+	public void doGet(HttpServletRequest req, HttpServletResponse resp)
+	   throws ServletException, IOException {
+		resp.setContentType("text;html;charset=utf-8");
+		String name=req.getParameter("name");
+		PrintWriter out = resp.getWriter();
+		out.write(name+"你好");
+	}
+	···
+```
+  
+
 
 
 
