--- a/音频广告推送模型---日常开发记录1.md
+++ b/音频广告推送模型---日常开发记录1.md
@@ -467,7 +467,26 @@ public class adServlet extends HttpServlet {
 	}
 	···
 ```
-  
+21 在本机上部署成功后，可以通过浏览器，请求到响应。<br>
+然后需要部署在服务器上。<br>
+a.服务器端安装tomcat，上传tomcat的rar包。然后解压：unrar x xxx.rar。<br>
+b.配置环境变量。<br>
+```shell
+export JAVA_HOME=/home/bae/ci/CI/bin/jdk1.6.0_06
+export PATH=$PATH:/usr/share/baidu/bin:$JAVA_HOME/bin
+export CLASSPATH=.:$JAVA_HOME/lib/dt.jar:$JAVA_HOME/lib/tools.jar
+
+export CATALINA_HOME=/home/bae/tmp/liu/apache-tomcat-6.0.29
+export CATALINA_BASE=/home/bae/tmp/liu/apache-tomcat-6.0.29
+```
+c.改变脚本权限。chmod -R 777 文件夹/<br>
+在bin下的shutdown.sh 和startup.sh分别是关闭和启动tomcat的脚本。<br>
+d.查看是否启动：ps -ef|grep tomcat<br>
+e.请求curl http://localhost:8080/musicad/ads?type=3&id=1<br>
+
+注：期间一直不能请求，是因为8080端口被占用了。在server.xml进行更改，重启即可。
+
+本地通过myeclipse导出为war包。因为服务端的tomcat会直接把war包进行解压，运行不必在进行别的操作。
 
 
 
