--- a/杂记---面试别人，我会问些什么？.md
+++ b/杂记---面试别人，我会问些什么？.md
@@ -29,17 +29,20 @@
 --------------------------------
 <strong>技术类：</strong><br>
 1 组合数学中的趣味问题。<br>
-2 在打字和code的过程中，按键最多的字母有哪些？先估计下。若是让你去做，你会怎么样做？<br>
+2 在打字和code的过程中，按键最多的字母有哪些？先估计下。若是让你去统计，你会怎么样做？<br>
 3 读取一个指定文本，做些简单的事情，在写到指定文本。酌情不断地增加难度和要求。<br>
 4 画一下参与过项目框架图。这样设计有何优劣？<br>
 5 NP问题解思路讨论，参数调优。<br>
-6 token的实现原理。<br>
+6 token的设计原理。<br>
 7 SVM如何做多分类任务？<br>
 8 libsvm的使用流程？<br>
-9 使用脚本写一个功能：统计一个文件下的代码行数。<br>
+9 使用脚本写一个功能：统计一个目录下的文本行数。<br>
 10 可否提供以前的代码段，报告或是文章等。<br>
 11 隐性马尔科夫模型。<br>
 12 k-近邻算法。<br>
+13 计算多边形面积。<br>
+14 
+
 
 
 
