--- a/音频广告推送模型---日常开发记录1.md
+++ b/音频广告推送模型---日常开发记录1.md
@@ -423,6 +423,7 @@ sys	0m0.024s
    userid  2380ms <br>
     cuid    728ms <br>
     baiduid 111ms <br>
+
 在本地机器上运行的时间：<br>
 >
    userid  954ms <br>
@@ -432,7 +433,12 @@ sys	0m0.024s
 解决方案：<br>
 a. 不用jar的方式提供服务，而是配置tomcat，提供web服务。<br>
 b. 优化内部代码。一定有优化的余地。<br>
-
+后续补充,使用web方式后:<br>
+>
+   userid  9ms <br>
+    cuid    6ms <br>
+    baiduid 6ms <br>
+性能提升明显。<br>
 20 提供web服务:<br>
 a.[tomcat本地配置](http://jingyan.baidu.com/article/8065f87fcc0f182330249841.html)<br>
 b.[为web项目添加struts框架](http://jingyan.baidu.com/article/7082dc1c56cd18e40a89bdef.html)<br>
@@ -484,10 +490,51 @@ c.改变脚本权限。chmod -R 777 文件夹/<br>
 d.查看是否启动：ps -ef|grep tomcat<br>
 e.请求curl http://localhost:8080/musicad/ads?type=3&id=1<br>
 
-注：期间一直不能请求，是因为8080端口被占用了。在server.xml进行更改，重启即可。
+注：期间一直不能请求，是因为8080端口被占用了。在server.xml进行更改，重启即可。<br>
 
-本地通过myeclipse导出为war包。因为服务端的tomcat会直接把war包进行解压，运行不必在进行别的操作。
-
+本地通过myeclipse导出为war包。因为服务端的tomcat会直接把war包进行解压，运行不必在进行别的操作。<br>
+22 各个阈值的确定，我们先找出各个标签的中位数：<br>
+```
+餐饮：36
+房产家居：44
+阅读：48
+游戏：61
+影音：0
+医疗：46
+体育健身：46
+数码：31
+生活服务：43
+汽车：55
+母婴：23
+美容：33
+旅游：45
+金融财经：51
+教育培训：44
+交通票务：34
+购物：47
+工作：43
+```
+以30为阈值，计算各个标签的比率(不低于30的数目/总数目)<br>
+```
+教育培训：0.6982119924923441
+房产家居：0.6652178208041094
+工作：0.6789489281833448
+生活服务：0.6299515953768645
+体育健身：0.7097698310777437
+旅游：0.7050281537093747
+交通票务：0.5515163489084264
+影音：0.02272053739010175
+阅读：0.7590635187197471
+医疗：0.6772695841153809
+美容：0.5309690803121604
+数码：0.5128914353452534
+金融财经：0.7834634001778129
+母婴：0.469426059468537
+游戏：0.8638743455497382
+餐饮：0.5806579077348613
+购物：0.7458263360663835
+汽车：0.8207053245085449
+```
 
 
 
