--- a/关于我.md
+++ b/关于我.md
@@ -1,9 +1,9 @@
 #关于我
-```
-概括性综述
-足球喜欢的人
-篮球喜欢的人
-读书历程
-画画展示
-技术偏好
-```
+从其他方面来说说我的爱好：<br>
+<strong>足球:</strong><br>
+
+<strong>篮球:</strong><br>
+<strong>绘画:</strong><br>
+<strong>读书:</strong><br>
+<strong>技术偏好:</strong><br>
+
