恩，就这样吧。
就这样吧

--- a/关于我.md
+++ b/关于我.md
@@ -1,9 +1,25 @@
 #关于我
-从其他方面来说说我的爱好：<br>
+那么小的链接，都被你发现了。：<br>
 <strong>足球:</strong><br>
+最爱中场型球员，那种有张力的球员，像当前的伊涅斯塔，亚亚图雷，大卫席尔瓦。不得不说，梅西真是个传奇。<br>
+球队方面，我是巴萨的死忠。西甲球迷，大赛型球迷（欧冠，欧洲杯，世界杯）。从来不关注亚洲足球。<br>
 
 <strong>篮球:</strong><br>
-<strong>绘画:</strong><br>
-<strong>读书:</strong><br>
-<strong>技术偏好:</strong><br>
+因为很少有风格稳定的球队，所以在球队层面上没啥喜欢。<br>
+球员方面，喜欢当前的保罗和皮尔斯。詹姆斯真是全面，再有一点点科比或乔丹的偏执，就完美了。<br>
 
+<strong>绘画:</strong><br>
+铅笔画/钢笔画入门，目前正在练习线条基础。
+
+<strong>读书:</strong><br>
+目前正在读野夫，王小波。<br>
+
+<strong>音乐:</strong><br>
+莫文蔚，罗琦的拥趸；<br>
+周杰伦，五月天的歌词写的真赞；<br>
+最想听的现场是林肯公园。<br>
+
+<strong>技术偏好:</strong><br>
+自认为Java写不少，但还没达到满意。<br>
+一直有学习机器学习。<br>
+目前一直在学习shell。<br>
