--- a/关于我.md
+++ b/关于我.md
@@ -1,5 +1,6 @@
 #关于我
-那么小的链接，都被你发现了。：<br>
+那么小的链接，都被你发现了。<br>
+主要说说业务爱好，让你看到另一面的我。<br>
 <strong>足球:</strong><br>
 最爱中场型球员，那种有张力的球员，像当前的伊涅斯塔，亚亚图雷，大卫席尔瓦。不得不说，梅西真是个传奇。<br>
 球队方面，我是巴萨的死忠。西甲球迷，大赛型球迷（欧冠，欧洲杯，世界杯）。从来不关注亚洲足球。<br>
@@ -13,6 +14,7 @@
 
 <strong>读书:</strong><br>
 目前正在读野夫，王小波。<br>
+强烈推荐《创业时，我们在知乎聊什么？》<br>
 
 <strong>音乐:</strong><br>
 莫文蔚，罗琦的拥趸；<br>
@@ -22,4 +24,4 @@
 <strong>技术偏好:</strong><br>
 自认为Java写不少，但还没达到满意。<br>
 一直有学习机器学习。<br>
-目前一直在学习shell。<br>
+目前有在学习shell。<br>
