--- a/关于我.md
+++ b/关于我.md
@@ -15,10 +15,12 @@
 <strong>读书:</strong><br>
 目前正在读野夫，王小波。<br>
 强烈推荐《创业时，我们在知乎聊什么？》<br>
+极力推崇张公子(张佳玮)的书，知乎的大神，阅读量以及思想情操都够格。<br>
 
 <strong>音乐:</strong><br>
+陈升的粉儿;<br>
 莫文蔚，罗琦的拥趸；<br>
-周杰伦，五月天的歌词写的真赞；<br>
+周杰伦，五月天，苏打绿的歌词写的真赞；<br>
 最想听的现场是林肯公园。<br>
 
 <strong>技术偏好:</strong><br>
