--- a/音频广告推送模型---日常开发记录1.md
+++ b/音频广告推送模型---日常开发记录1.md
@@ -435,10 +435,10 @@ a. 不用jar的方式提供服务，而是配置tomcat，提供web服务。<br>
 b. 优化内部代码。一定有优化的余地。<br>
 后续补充,使用web方式后:<br>
 >
-   userid  9ms <br>
-    cuid    6ms <br>
+   userid  587ms <br>
+    cuid    237ms <br>
     baiduid 6ms <br>
-性能提升明显。<br>
+<br>
 20 提供web服务:<br>
 a.[tomcat本地配置](http://jingyan.baidu.com/article/8065f87fcc0f182330249841.html)<br>
 b.[为web项目添加struts框架](http://jingyan.baidu.com/article/7082dc1c56cd18e40a89bdef.html)<br>
@@ -452,6 +452,7 @@ c.配置web.xml：<br>
     <servlet-name>ads</servlet-name>  (对内的使用名称，和上面的servlet-name里面的值一致即可)
     <url-pattern>/ads</url-pattern>  (对外的匹配名称)
 </servlet-mapping>
+
 ```
 d.编写servlet代码：<br>
 ```java
@@ -472,11 +473,12 @@ public class adServlet extends HttpServlet {
 	}
 	···
 ```
+<br>
 21 在本机上部署成功后，可以通过浏览器，请求到响应。<br>
 然后需要部署在服务器上。<br>
 a.服务器端安装tomcat，上传tomcat的rar包。然后解压：unrar x xxx.rar。<br>
 b.配置环境变量。<br>
-```shell
+```
 export JAVA_HOME=/home/bae/ci/CI/bin/jdk1.6.0_06
 export PATH=$PATH:/usr/share/baidu/bin:$JAVA_HOME/bin
 export CLASSPATH=.:$JAVA_HOME/lib/dt.jar:$JAVA_HOME/lib/tools.jar
@@ -484,6 +486,7 @@ export CLASSPATH=.:$JAVA_HOME/lib/dt.jar:$JAVA_HOME/lib/tools.jar
 export CATALINA_HOME=/home/bae/tmp/liu/apache-tomcat-6.0.29
 export CATALINA_BASE=/home/bae/tmp/liu/apache-tomcat-6.0.29
 ```
+<br>
 c.改变脚本权限。chmod -R 777 文件夹/<br>
 在bin下的shutdown.sh 和startup.sh分别是关闭和启动tomcat的脚本。<br>
 d.查看是否启动：ps -ef|grep tomcat<br>
@@ -534,6 +537,15 @@ e.请求curl http://localhost:8080/musicad/ads?type=3&id=1<br>
 购物：0.7458263360663835
 汽车：0.8207053245085449
 ```
+<br>
+23 linux下curl请求问题:<br>
+在windows下通过浏览器请求http://localhost:8080/musicad/ads?type=3&id=1可以得到所求。<br>
+但是在linux下，通过curl命令请求：curl http://localhost:8080/musicad/ads?type=3&id=1只能获取type的值，获取不到id的值。<br>
+原因：必须对&进行下转义才能$_GET获取到所有参数。<br>
+curl  -s  http://localhost:8080/musicad/ads?type=3\&id=1<br>
+当然，最简单的方法 用双引号把整个url引起来就ok了<br>
+curl  -s  "http://localhost:8080/musicad/ads?type=3&id=1"<br>
+
 
 
 
